인터셉터 / URL 재정의 / 로그인 페이지 유지

--- a/src/main/resources/templates/thymeleaf/fo/about/about.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/about.html
@@ -75,7 +75,7 @@
     	.swiper-slide{background-color:rgb(255 255 255 / 0%);}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
 </head>
 
