--- a/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/terms_1.html
@@ -76,7 +76,7 @@
     	.swiper-slide{background-color:rgb(255 255 255 / 0%);}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 
 <body>
@@ -92,8 +92,8 @@
 				<div class="terms-wrap">
 					<ul class="nav nav-tabs">
 						<li class='active'><a href="#">이용약관</a></li>
-						<li><a href="/privacyPolicy">개인정보처리방침</a></li>
-						<li><a href="/marketing">마케팅 및 광고성 정보 수신에 대한 동의</a></li>
+						<li><a href="/about/privacyPolicy">개인정보처리방침</a></li>
+						<li><a href="/about/marketing">마케팅 및 광고성 정보 수신에 대한 동의</a></li>
 					</ul>
 					<div class="tab-content">
 						<div class="tab-pane fade in active" id="tabmenu_01">
@@ -307,7 +307,7 @@
 							2. 회사가 제공하는 온라인사이트 ”딜링아트” 서비스에 대한 수수료의 종류와 비율은 다음과 같습니다. <br>
 							<!-- 
 							* [수수료 변경 Task]
-							* 이용 약관(http://localhost/termOfService)
+							* 이용 약관(http://localhost/about/termOfService)
 							* 내용 : 이용양관 판매 수수료 텍스트 변경
 							* 낙찰가 10% -> 5% 변경 (2023-01-16) : 정대현
 							-->
