--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artist.html
@@ -82,7 +82,7 @@
     	};
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 
 <body>
@@ -95,7 +95,7 @@
 			<div class="contents max-1500" id="div_masterArtist">
 				<div class="cont-title3">
 					<h3>대가<span>~ b.1950</span></h3>
-					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
+					<!-- <a href="#" class="ct-more"><img src="/resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
 				<div class="swi-box swi-show-4">
 					<div class="swiper mySwiper4">
@@ -104,8 +104,8 @@
 						</div>
 						<!-- <div class="swiper-pagination swpa-2 pc-no"></div> -->
 					</div>
-					<div class="swiper-button-next ait-r ta-no swl-4"><span><img src="resources/img/icon/ait-r.png"></span></div>
-					<div class="swiper-button-prev ait-l ta-no swr-4"><span><img src="resources/img/icon/ait-l.png"></span></div>
+					<div class="swiper-button-next ait-r ta-no swl-4"><span><img src="/resources/img/icon/ait-r.png"></span></div>
+					<div class="swiper-button-prev ait-l ta-no swr-4"><span><img src="/resources/img/icon/ait-l.png"></span></div>
 				</div>
 				<!-- <div class="text-center">
 					<button type="button" class="btn-more ta-no"><span>more</span></button>
@@ -116,7 +116,7 @@
 			<div class="contents max-1500" id="div_seniorArtist">
 				<div class="cont-title3">
 					<h3>원로<span>b.1951 ~ 1965</span></h3>
-					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
+					<!-- <a href="#" class="ct-more"><img src="/resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
 				<div class="swi-box swi-show-3">
 					<div class="swiper mySwiper3">
@@ -125,8 +125,8 @@
 						</div>
 						<!-- <div class="swiper-pagination swpa-2 pc-no"></div> -->
 					</div>
-					<div class="swiper-button-next ait-r ta-no swl-3"><span><img src="resources/img/icon/ait-r.png"></span></div>
-					<div class="swiper-button-prev ait-l ta-no swr-3"><span><img src="resources/img/icon/ait-l.png"></span></div>
+					<div class="swiper-button-next ait-r ta-no swl-3"><span><img src="/resources/img/icon/ait-r.png"></span></div>
+					<div class="swiper-button-prev ait-l ta-no swr-3"><span><img src="/resources/img/icon/ait-l.png"></span></div>
 				</div>
 				<!-- <div class="text-center">
 					<button type="button" class="btn-more ta-no"><span>more</span></button>
@@ -137,7 +137,7 @@
 			<div class="contents max-1500" id="div_middleAgedArtist">
 				<div class="cont-title3">
 					<h3>중견<span>b.1966 ~ 1980</span></h3>
-					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
+					<!-- <a href="#" class="ct-more"><img src="/resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
 				<div class="swi-box swi-show-2">
 					<div class="swiper mySwiper2">
@@ -146,8 +146,8 @@
 						</div>
 						<!-- <div class="swiper-pagination swpa-2 pc-no"></div> -->
 					</div>
-					<div class="swiper-button-next ait-r ta-no swl-2"><span><img src="resources/img/icon/ait-r.png"></span></div>
-					<div class="swiper-button-prev ait-l ta-no swr-2"><span><img src="resources/img/icon/ait-l.png"></span></div>
+					<div class="swiper-button-next ait-r ta-no swl-2"><span><img src="/resources/img/icon/ait-r.png"></span></div>
+					<div class="swiper-button-prev ait-l ta-no swr-2"><span><img src="/resources/img/icon/ait-l.png"></span></div>
 				</div>
 				<!-- <div class="text-center">
 					<button type="button" class="btn-more ta-no"><span>more</span></button>
@@ -158,7 +158,7 @@
 			<div class="contents max-1500" id="div_upAndComingArtist">
 				<div class="cont-title3">
 					<h3>신진<span>b.1981 ~ </span></h3>
-					<!-- <a href="#" class="ct-more"><img src="resources/img/icon-p.jpg" /><span>more</span></a> -->
+					<!-- <a href="#" class="ct-more"><img src="/resources/img/icon-p.jpg" /><span>more</span></a> -->
 				</div>
 				<div class="swi-box swi-show-1">
 					<div class="swiper mySwiper1">
@@ -167,8 +167,8 @@
 						</div>
 						<!-- <div class="swiper-pagination swpa-2 pc-no"></div> -->
 					</div>
-					<div class="swiper-button-next ait-r ta-no swl-1"><span><img src="resources/img/icon/ait-r.png"></span></div>
-					<div class="swiper-button-prev ait-l ta-no swr-1"><span><img src="resources/img/icon/ait-l.png"></span></div>
+					<div class="swiper-button-next ait-r ta-no swl-1"><span><img src="/resources/img/icon/ait-r.png"></span></div>
+					<div class="swiper-button-prev ait-l ta-no swr-1"><span><img src="/resources/img/icon/ait-l.png"></span></div>
 				</div>
 				<!-- <div class="text-center">
 					<button type="button" class="btn-more ta-no"><span>more</span></button>
@@ -483,7 +483,7 @@ $(function() {
 function artistLibraryList(){
 	$.ajax({
         type: "post",
-        url: "/openArtistLibrary",
+        url: "/artist/openArtistLibrary",
         dataType:"json",
         success: function(data) {
         	var upAndComingArtist = "";
@@ -506,12 +506,12 @@ function artistLibraryList(){
 		        		if(upAndComingArtist[i].artstWorkImgUrl != null && upAndComingArtist[i].artstWorkImgUrl != ""){
 		        			upAndComingArtistHtml += '		<div class="hd-bg3"><img src="'+ upAndComingArtist[i].artstWorkImgUrl +'" /></div>';
 		        		}else{
-		        			upAndComingArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png"/></div>';
+		        			upAndComingArtistHtml += '		<div class="hd-bg3"><img src="/resources/img/icon/bg-1.png"/></div>';
 		        		}
 		        		if(upAndComingArtist[i].artstProfileImgUrl != null && upAndComingArtist[i].artstProfileImgUrl != ""){
 		        			upAndComingArtistHtml += '		<div class="user-1"><img src="'+ upAndComingArtist[i].artstProfileImgUrl +'" style="border-radius:40%;"></div>';
 		        		}else{
-		        			upAndComingArtistHtml += '		<div class="user-1"><img src="resources/img/icon/user-1.png"></div>';
+		        			upAndComingArtistHtml += '		<div class="user-1"><img src="/resources/img/icon/user-1.png"></div>';
 		        		}
 		        		upAndComingArtistHtml += '		<div class="hd-text">';
 		        		upAndComingArtistHtml += '			<h4>'+ upAndComingArtist[i].artstActvtyNm +'('+ upAndComingArtist[i].artistBirthYear +')</h4>';
@@ -532,12 +532,12 @@ function artistLibraryList(){
 		        		if(middleAgedArtist[i].artstWorkImgUrl != null && middleAgedArtist[i].artstWorkImgUrl != ""){
 		        			middleAgedArtistHtml += '		<div class="hd-bg3"><img src="'+ middleAgedArtist[i].artstWorkImgUrl +'" /></div>';
 		        		}else{
-		        			middleAgedArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
+		        			middleAgedArtistHtml += '		<div class="hd-bg3"><img src="/resources/img/icon/bg-1.png" /></div>';
 		        		}
 		        		if(middleAgedArtist[i].artstProfileImgUrl != null && middleAgedArtist[i].artstProfileImgUrl != ""){
 		        			middleAgedArtistHtml += '		<div class="user-1"><img src="'+ middleAgedArtist[i].artstProfileImgUrl +'" style="border-radius:40%;"></div>';
 		        		}else{
-		        			middleAgedArtistHtml += '		<div class="user-1"><img src="resources/img/icon/user-1.png"></div>';
+		        			middleAgedArtistHtml += '		<div class="user-1"><img src="/resources/img/icon/user-1.png"></div>';
 		        		}
 		        		middleAgedArtistHtml += '		<div class="hd-text">';
 		        		middleAgedArtistHtml += '			<h4>'+ middleAgedArtist[i].artstActvtyNm +'('+ middleAgedArtist[i].artistBirthYear +')</h4>';
@@ -558,12 +558,12 @@ function artistLibraryList(){
 		        		if(seniorArtist[i].artstWorkImgUrl != null && seniorArtist[i].artstWorkImgUrl != ""){
 		        			seniorArtistHtml += '		<div class="hd-bg3"><img src="'+ seniorArtist[i].artstWorkImgUrl +'" /></div>';
 		        		}else{
-		        			seniorArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
+		        			seniorArtistHtml += '		<div class="hd-bg3"><img src="/resources/img/icon/bg-1.png" /></div>';
 		        		}
 		        		if(seniorArtist[i].artstProfileImgUrl != null && seniorArtist[i].artstProfileImgUrl != ""){
 		        			seniorArtistHtml += '		<div class="user-1"><img src="'+ seniorArtist[i].artstProfileImgUrl +'" style="border-radius:40%;"></div>';
 		        		}else{
-		        			seniorArtistHtml += '		<div class="user-1"><img src="resources/img/icon/user-1.png"></div>';
+		        			seniorArtistHtml += '		<div class="user-1"><img src="/resources/img/icon/user-1.png"></div>';
 		        		}
 		        		seniorArtistHtml += '		<div class="hd-text">';
 		        		seniorArtistHtml += '			<h4>'+ seniorArtist[i].artstActvtyNm +'('+ seniorArtist[i].artistBirthYear +')</h4>';
@@ -585,12 +585,12 @@ function artistLibraryList(){
 		        		if(masterArtist[i].artstWorkImgUrl != null && masterArtist[i].artstWorkImgUrl != ""){
 		        			masterArtistHtml += '		<div class="hd-bg3"><img src="'+ masterArtist[i].artstWorkImgUrl +'" /></div>';
 		        		}else{
-		        			masterArtistHtml += '		<div class="hd-bg3"><img src="resources/img/icon/bg-1.png" /></div>';
+		        			masterArtistHtml += '		<div class="hd-bg3"><img src="/resources/img/icon/bg-1.png" /></div>';
 		        		}
 		        		if(masterArtist[i].artstProfileImgUrl != null && masterArtist[i].artstProfileImgUrl != ""){
 		        			masterArtistHtml += '		<div class="user-1"><img src="'+ masterArtist[i].artstProfileImgUrl +'" style="border-radius:40%;"></div>';
 		        		}else{
-		        			masterArtistHtml += '		<div class="user-1"><img src="resources/img/icon/user-1.png"></div>';
+		        			masterArtistHtml += '		<div class="user-1"><img src="/resources/img/icon/user-1.png"></div>';
 		        		}
 		        		masterArtistHtml += '		<div class="hd-text">';
 		        		masterArtistHtml += '			<h4>'+ masterArtist[i].artstActvtyNm +'('+ masterArtist[i].artistBirthYear +')</h4>';
@@ -615,22 +615,12 @@ function artistLibraryList(){
       
 $(document).on("click", ".swiper-slide", function(){
 	var artstSq= $(this).attr("artstSq");
-	
+	var requestUrl = "/artist/artistDetail";
     
-	location.href = "/artistDetail?artstSq="+artstSq;
-	
-	
-	/* pageGoPost({
-		url:"/artistDetail",
-		target:"_self",
-		vals:[
-			["artstSq", artstSq],
-			["artistBirthYear", artistBirthYear]
-		]
-	}); */
+	loginCheck(requestUrl,artstSq);
     
 });
-      
+
 </script>
     
 <!-- 네이버 광고 로그분석 추적 코드 -->
