--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -75,7 +75,7 @@
     	.swiper-slide{background-color:rgb(255 255 255 / 0%);}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 
 <body>
@@ -175,7 +175,7 @@
 		<div class="modal-content">
 			<div class="modal-header" style="padding: 0;min-height: 0;">
 				<div class="baegs">
-				    <div class="close" onclick="closeArtstInfoModal()"><img src="resources/img/ba/icon-end_1.png" /></div>
+				    <div class="close" onclick="closeArtstInfoModal()"><img src="/resources/img/ba/icon-end_1.png" /></div>
 				</div>
 
 			</div>
@@ -256,7 +256,7 @@ $(function() {
 		artstInfoHtml += '<h3>Artist library</h3>';
 		artstInfoHtml += '</div>';
 		artstInfoHtml += '<div class="ad-sty">';
-		//artstInfoHtml2 += '<div class="ad-user"><img src="resources/img/icon/user-2.png" /></div>';
+		//artstInfoHtml2 += '<div class="ad-user"><img src="/resources/img/icon/user-2.png" /></div>';
 		artstInfoHtml += '<div class="ad-user" style="margin-bottom:100px;"><img src="'+ artstInfo.artistInfo.artstProfileImgUrl +'"/></div>';
 		artstInfoHtml += '<div class="ad-text">';
 		artstInfoHtml += '	<h3>'+ artstInfo.artistInfo.artstActvtyNm +'</h3>';
@@ -267,15 +267,15 @@ $(function() {
 		artstInfoHtml += '<dt>SNS</dt>';
 		artstInfoHtml += '<dd>';
 		if(artstInfo.artistInfo.artstInstagramUrl != null && artstInfo.artistInfo.artstInstagramUrl != ""){
-			artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstInstagramUrl +'" target="_blank" class="if-img"><img src="resources/img/icon/i-1.png" /></a>';
+			artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstInstagramUrl +'" target="_blank" class="if-img"><img src="/resources/img/icon/i-1.png" /></a>';
 		}
 		if(artstInfo.artistInfo.artstfacebookUrl != null && artstInfo.artistInfo.artstfacebookUrl != ""){
-			artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstfacebookUrl +'" target="_blank" class="if-img"><img src="resources/img/icon/i-2.png" /></a>';
+			artstInfoHtml += '	<a href="'+ artstInfo.artistInfo.artstfacebookUrl +'" target="_blank" class="if-img"><img src="/resources/img/icon/i-2.png" /></a>';
 		}
-		/* artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-3.png" /></a>';
-		artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-4.png" /></a>';
-		artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-5.png" /></a>';
-		artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-6.png" /></a>'; */
+		/* artstInfoHtml += '	<a href="#" class="if-img"><img src="/resources/img/icon/i-3.png" /></a>';
+		artstInfoHtml += '	<a href="#" class="if-img"><img src="/resources/img/icon/i-4.png" /></a>';
+		artstInfoHtml += '	<a href="#" class="if-img"><img src="/resources/img/icon/i-5.png" /></a>';
+		artstInfoHtml += '	<a href="#" class="if-img"><img src="/resources/img/icon/i-6.png" /></a>'; */
 		artstInfoHtml += '</dd>';
 		artstInfoHtml += '</dl>';
 		
@@ -356,15 +356,15 @@ $(function() {
 		artstInfoHtml2 += '<dt>SNS</dt>';
 		artstInfoHtml2 += '<dd>';
 		if(artstInfo.artistInfo.artstInstagramUrl != null && artstInfo.artistInfo.artstInstagramUrl != ""){
-			artstInfoHtml2 += '	<a href="'+ artstInfo.artistInfo.artstInstagramUrl +'" target="_blank" class="if-img"><img src="resources/img/icon/i-1.png" /></a>';
+			artstInfoHtml2 += '	<a href="'+ artstInfo.artistInfo.artstInstagramUrl +'" target="_blank" class="if-img"><img src="/resources/img/icon/i-1.png" /></a>';
 		}
 		if(artstInfo.artistInfo.artstfacebookUrl != null && artstInfo.artistInfo.artstfacebookUrl != ""){
-			artstInfoHtml2 += '	<a href="'+ artstInfo.artistInfo.artstfacebookUrl +'" target="_blank" class="if-img"><img src="resources/img/icon/i-2.png" /></a>';
+			artstInfoHtml2 += '	<a href="'+ artstInfo.artistInfo.artstfacebookUrl +'" target="_blank" class="if-img"><img src="/resources/img/icon/i-2.png" /></a>';
 		}
-		/* artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-3.png" /></a>';
-		artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-4.png" /></a>';
-		artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-5.png" /></a>';
-		artstInfoHtml += '	<a href="#" class="if-img"><img src="resources/img/icon/i-6.png" /></a>'; */
+		/* artstInfoHtml += '	<a href="#" class="if-img"><img src="/resources/img/icon/i-3.png" /></a>';
+		artstInfoHtml += '	<a href="#" class="if-img"><img src="/resources/img/icon/i-4.png" /></a>';
+		artstInfoHtml += '	<a href="#" class="if-img"><img src="/resources/img/icon/i-5.png" /></a>';
+		artstInfoHtml += '	<a href="#" class="if-img"><img src="/resources/img/icon/i-6.png" /></a>'; */
 		artstInfoHtml2 += '</dd>';
 		artstInfoHtml2 += '</dl>';
 		
@@ -474,7 +474,7 @@ function onload(sort, type){
 		paramMap.artstSq = $("#artstSq").val();
 		$.ajax({
 	        type: "post",
-	        url: "/artistDetail/sort",
+	        url: "/artist/artistDetail/sort",
 	        contentType:"application/json;",
 	        data: JSON.stringify(paramMap),
 	        success: function(data) {
@@ -519,7 +519,7 @@ function onload(sort, type){
 				html += '<div>';
 				html += '<div class="uesr-s">';
 				if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
- 				html += '<img src="resources/img/de/ues-icon.png"/>';
+ 				html += '<img src="/resources/img/de/ues-icon.png"/>';
      			}else{
      			html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
      			}
@@ -575,7 +575,7 @@ function onload(sort, type){
 				html += '<div>';
 				html += '<div class="uesr-s">';
 				if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
- 				html += '<img src="resources/img/de/ues-icon.png"/>';
+ 				html += '<img src="/resources/img/de/ues-icon.png"/>';
  				}else{
  				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
  				}
@@ -622,7 +622,7 @@ function onload(sort, type){
 				html += '<div>';
 				html += '<div class="uesr-s">';
 				if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
- 				html += '<img src="resources/img/de/ues-icon.png"/>';
+ 				html += '<img src="/resources/img/de/ues-icon.png"/>';
  				}else{
  				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
  				}
@@ -666,7 +666,7 @@ function onload(sort, type){
 				html += '<div>';
 				html += '<div class="uesr-s">';
 				if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
- 				html += '<img src="resources/img/de/ues-icon.png"/>';
+ 				html += '<img src="/resources/img/de/ues-icon.png"/>';
      			}else{
      				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
      			}
@@ -746,7 +746,7 @@ $(document).on("click", "#openArtstInfoModal", function(){
 	var params = new URLSearchParams(urlParam);
 	var artstSq= param.get('artstSq');
 	
-	location.href = '/artistDetail?artstSq='+artstSq+'&more='+artstSq;
+	location.href = '/artist/artistDetail?SqNumber='+artstSq+'&more='+artstSq;
 });
 
 	 
@@ -760,11 +760,11 @@ if(window.matchMedia('(min-width: 1537px)').matches) {
 // } 
 
 function dealDetail(dealSq){
-	location.href = "/bidding?dealSq="+dealSq;
+	location.href = "/deal/bidding?SqNumber="+dealSq;
 }
 
 function workDetail(workSq){
- 	location.href="/workDetail?workSq="+workSq;
+ 	location.href="/deal/workDetail?SqNumber="+workSq;
 }
 
 $(document).on("click", ".heart", function(){
@@ -775,7 +775,7 @@ $(document).on("click", ".heart", function(){
 	if($(this).hasClass("on")){
 		$.ajax({
 	        type: "post",
-	        url: "/scrapDel",
+	        url: "/member/myPage/scrapDel",
 	        data: param,
 	        success: function(data) {
 	        	element.removeClass("on");
@@ -787,7 +787,7 @@ $(document).on("click", ".heart", function(){
 	}else{
 		$.ajax({
 	        type: "post",
-	        url: "/scrapAdd",
+	        url: "/member/myPage/scrapAdd",
 	        data: param,
 	        success: function(data) {
 	        	if(data == 1){
@@ -845,10 +845,10 @@ function artistWorkDetail()
 	  var artstSq= $("#artstSq").val();
 	     
 	  pageGoPost({
-			url:"/artistDetailWork",
+			url:"/artist/artistDetailWork",
 			target:"_self",
 			vals:[
-				["artstSq", artstSq]
+				["SqNumber", artstSq]
 			]
 		});
 }
