--- a/src/main/resources/templates/thymeleaf/fo/event/event_v2.html
+++ b/src/main/resources/templates/thymeleaf/fo/event/event_v2.html
@@ -11,10 +11,10 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<title>딜링아트</title>
-	<link type="text/css" rel="stylesheet" href="resources/css/event_css/font.css" />
-	<link type="text/css"rel="stylesheet" href="resources/css/event_css_v2/common_pc.css">
-	<link type="text/css" media="screen and (max-width: 750px)" rel="stylesheet" href="resources/css/event_css_v2/ui_mo.css" />
-	<link type="text/css" media="screen and (min-width: 751px)" rel="stylesheet" href="resources/css/event_css_v2/ui_pc.css" />
+	<link type="text/css" rel="stylesheet" href="/resources/css/event_css/font.css" />
+	<link type="text/css"rel="stylesheet" href="/resources/css/event_css_v2/common_pc.css">
+	<link type="text/css" media="screen and (max-width: 750px)" rel="stylesheet" href="/resources/css/event_css_v2/ui_mo.css" />
+	<link type="text/css" media="screen and (min-width: 751px)" rel="stylesheet" href="/resources/css/event_css_v2/ui_pc.css" />
 
 	<!-- 웹폰트 -->
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
@@ -42,24 +42,24 @@
 	<div class="wrap">
 		<div class="body-wrap">
 			<div class="la-title">
-				<img src="resources/img/event/title.png" />
+				<img src="/resources/img/event/title.png" />
 			</div>
 			<div class="la-text">
 				<p class="lt-1">김희수</p>
 				<p class="lt-2">KIM HEESOO</p>
 				
 				<div class="lt-text">‘ 포스트 박수근’ 으로 불리는 화제의 작가<br/>아트부산 2022 전시작 121점<span>ALL SOLD OUT!</span></div>
-				<img src="resources/img/event/img-1.png" class="img-1" />
+				<img src="/resources/img/event/img-1.png" class="img-1" />
 				<p class="lt-p">MZ세대는 물론, 예술을 향유하는 모든 세대를 사로잡은<br/>작가 김희수의 작품을 딜링아트에서 선보입니다</p>
 			</div>
 			<div class="la-div-1">
 				<div class="img-box">
 					<div class="img-list">
-						<img src="resources/img/event/img-2.png" />
+						<img src="/resources/img/event/img-2.png" />
 						<p class="lan-p">&lt;untitled&gt;, acrylic on canvas, 37.9x45.5 (8호)</p>
 					</div>
 					<div class="img-list">
-						<img src="resources/img/event/img-3.png" class="img-3s" />
+						<img src="/resources/img/event/img-3.png" class="img-3s" />
 						<p class="lan-p">&lt;untitled&gt;, acrylic on canvas, 45.5x53 (10호)</p>
 					</div>
 					<h3 class="img-h3">“평범함이 주는 특별한 위로”</h3>
@@ -68,7 +68,7 @@
 			</div>
 			<div class="la-div-2">
 				<div class="img-box">
-					<img src="resources/img/event/img-4.png" />
+					<img src="/resources/img/event/img-4.png" />
 					<p class="lan-p">&lt;untitled&gt;, acrylic on canvas, 45.5x33.4 (8호)</p>
 				</div>
 			</div>
@@ -78,12 +78,12 @@
 					<p>아크릴을 통해 인물을 그리는 작가는 우울한 감정을 오롯이 <br/>받아들이고 어둠의 필연적인 면모를 솔직하게 드러낸다. <br/>작품 속 인물은 무표정한 사람들부터 찡그리고 놀라는 모습의 <br/>사람들까지 어두운 분위기를 띄고 있지만 따듯하고 희망적인 <br/>요소 역시 찾아볼 수 있다.</p>
 				</div>
 				<div class="img-poa">
-					<img src="resources/img/event/img-5.png" />
+					<img src="/resources/img/event/img-5.png" />
 					<p class="lan-p">&lt;untitled&gt;, acrylic on canvas, 27x41 (6호)</p>
 				</div>
 				
 				<div class="img-eo">
-					<img src="resources/img/event/img-6.png" />
+					<img src="/resources/img/event/img-6.png" />
 					<p class="lan-p">&lt;untitled&gt;, acrylic on canvas, 53x72.7 (20호)</p>
 				</div>
 				
@@ -108,7 +108,7 @@
 				</div>
 				
 				<div class="btn-box">
-					<a href="/totalSearch_work?searchKeyword=김희수" class="btn-a" />거래작품 더 보러가기</a>
+					<a href="/main/totalSearch_work?searchKeyword=김희수" class="btn-a" />거래작품 더 보러가기</a>
 				</div>
 				
 			</div>
