--- a/src/main/resources/templates/thymeleaf/fo/mgz/media.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/media.html
@@ -75,7 +75,7 @@
     	.swiper-slide{background-color:rgb(255 255 255 / 0%);}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
 </head>
 
@@ -88,16 +88,16 @@
 				<div class="mgz-wrap">
 					<div class="mgz-top mgz-bg-2">
 						<div class="mgz-title">
-							<img src="resources/img/mgz/title.png" />
+							<img src="/resources/img/mgz/title.png" />
 							<div class="mgz-text"><span>영상으로 만나는 Art, A rtist 그리고 Story</span></div>
 						</div>
 					</div>
 					<div class="mgz-body max-1500">
 						<div class="mgz-link">
 							<ul class="mgz-ul">
-								<li><a href="/insights">Insights</a></li>
-								<li class="active"><a href="/media">Artist Film</a></li>
-								<li><a href="/exhibition">Exhibition</a></li>
+								<li><a href="/mgz9/insights">Insights</a></li>
+								<li class="active"><a href="/mgz9/media">Artist Film</a></li>
+								<li><a href="/mgz9/exhibition">Exhibition</a></li>
 							</ul>
 						</div>
 						
@@ -123,7 +123,7 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<div class="conts">
-				    <div data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end_1.png" style="width:20px;"></div>
+				    <div data-dismiss="modal" aria-label="Close"><img src="/resources/img/ba/icon-end_1.png" style="width:20px;"></div>
 				</div>
 			</div>
 			<div id="editor" class="ck-blurred ck ck-content ck-rounded-corners" lang="en" dir="ltr" role="textbox" aria-label="Rich Text Editor, main" contenteditable="false">
@@ -178,7 +178,7 @@ $(document).ready(function(){
  	
  	$.ajax({
          type: "post",
-         url: "/selectMgz9List",
+         url: "/mgz9/selectMgz9List",
          data:{
         	 pagestart : pageStart,
         	 page : page,
@@ -275,7 +275,7 @@ $(document).ready(function(){
 	  
   	$.ajax({
           type: "post",
-          url: "/selectMgz9Dtl",
+          url: "/mgz9/selectMgz9Dtl",
           data:{
          	 mgzSq : mgzSq
   		},
