--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWorkList.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWorkList.html
@@ -84,7 +84,7 @@
 		.griditem{ margin-bottom:40px;}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 
 <body>
@@ -103,7 +103,7 @@
 						<div class="myd-box-4">
 							<div class="input-gra" data-toggle="modal" data-target="#collModal2">
 								<input type="text" placeholder="작품명이나 작가명으로 검색하세요." id="searchKeyword" onkeydown="enter(event)"/>
-								<a href="javascript:void(0);" onclick="searchMyWork()"><img src="resources/img/mypage/icon-sech.png" /></a>
+								<a href="javascript:void(0);" onclick="searchMyWork()"><img src="/resources/img/mypage/icon-sech.png" /></a>
 							</div>
 						</div>
 						
@@ -114,7 +114,7 @@
 								<button type="button" id="bnal3" class="bnal-btn">소장중인 작품</button>
 							</div>
 							<div class="work-drp">
-								<div class="work-div work-click"><span>작품관리</span> <img src="resources/img/mypage/icon-8.png" /></div>
+								<div class="work-div work-click"><span>작품관리</span> <img src="/resources/img/mypage/icon-8.png" /></div>
 								<div class="work-hov">
 									<ul>
 										<li><a href="#" class="wrh-1"><span>공개/비공개</span></a></li>
@@ -150,7 +150,7 @@
 									
 									active하고 hover하면 나오고 /  sale 넣고 hover하면나옵니다 / auction hover
 									<div class="item-div-img active" >0823 start chediv 추가
-										<img src="resources/img/de/be-bg1.png" >
+										<img src="/resources/img/de/be-bg1.png" >
 										
 										<div class="item-ho" onclick="alert('click!');">
 											<p>2022. 01. 01 – 2022. 01.30</p>
@@ -206,7 +206,7 @@
 										<div class="heart on"></div>
 									
 										<div class="uesr-s">
-											<img src="resources/img/de/ues-icon.png" />
+											<img src="/resources/img/de/ues-icon.png" />
 										</div>
 										<div class="text-s">
 										
@@ -234,7 +234,7 @@
 									
 									sold-1 ~ 4 넣으면 나옵니다
 									<div class="item-div-img sold-2">
-										<img src="resources/img/de/be-bg2.png">
+										<img src="/resources/img/de/be-bg2.png">
 									</div>
 									
 									하단텍스트
@@ -244,7 +244,7 @@
 										<div class="heart"></div>
 									
 										<div class="uesr-s">
-											<img src="resources/img/de/ues-icon.png" />
+											<img src="/resources/img/de/ues-icon.png" />
 										</div>
 										<div class="text-s">
 											<h3>작가명 (1983년생)</h3>
@@ -264,7 +264,7 @@
 								<figure class="item">
 									
 									<div class="item-div-img sale">
-										<img src="resources/img/de/be-bg3.png">										
+										<img src="/resources/img/de/be-bg3.png">										
 									</div>
 									
 									하단텍스트
@@ -274,7 +274,7 @@
 										<div class="heart"></div>
 										
 										<div class="uesr-s">
-											<img src="resources/img/de/ues-icon.png" />
+											<img src="/resources/img/de/ues-icon.png" />
 										</div>
 										<div class="text-s">
 											<h3>작가명 (1983년생)</h3>
@@ -346,7 +346,7 @@
 							
 							active하고 hover하면 나오고 /  sale 넣고 hover하면나옵니다 / auction hover
 							<div class="item-div-img reg">
-								<img src="resources/img/de/be-bg1.png">
+								<img src="/resources/img/de/be-bg1.png">
 								
 								<div class="item-ho">
 									<p>2022. 01. 01 – 2022. 01.30</p>
@@ -383,7 +383,7 @@
 								임시저장
 								<div class="item-ho3 save-div">
 									<div class="saves">
-										<img src="resources/img/mypage/icon-7.png" />
+										<img src="/resources/img/mypage/icon-7.png" />
 										<span class="saves-text">임시저장</span>
 									</div>
 								</div>	
@@ -400,7 +400,7 @@
 							하단텍스트
 							<div class="item-body">
 								<div class="uesr-s">
-									<img src="resources/img/de/ues-icon.png" />
+									<img src="/resources/img/de/ues-icon.png" />
 								</div>
 								<div class="text-s">
 									<h3>작가명 (1983년생)</h3>
@@ -429,13 +429,13 @@
 							
 							sold-1 ~ 4 넣으면 나옵니다
 							<div class="item-div-img sold-2">
-								<img src="resources/img/de/be-bg2.png">
+								<img src="/resources/img/de/be-bg2.png">
 							</div>
 							
 							하단텍스트
 							<div class="item-body">
 								<div class="uesr-s">
-									<img src="resources/img/de/ues-icon.png" />
+									<img src="/resources/img/de/ues-icon.png" />
 								</div>
 								<div class="text-s">
 									<h3>작가명 (1983년생)</h3>
@@ -457,13 +457,13 @@
 							<div class="heart"></div>
 							
 							<div class="item-div-img sale">
-								<img src="resources/img/de/be-bg3.png">										
+								<img src="/resources/img/de/be-bg3.png">										
 							</div>
 							
 							하단텍스트
 							<div class="item-body">
 								<div class="uesr-s">
-									<img src="resources/img/de/ues-icon.png" />
+									<img src="/resources/img/de/ues-icon.png" />
 								</div>
 								<div class="text-s">
 									<h3>작가명 (1983년생)</h3>
@@ -505,8 +505,8 @@ jQuery(document).ready(function() {
 		var conTitleHtml = "";
 		conTitleHtml += '<h3>My Collection</h3>';
 		$("#conTitle").append(conTitleHtml).trigger("create");
-		//conBtn.innerHTML += '<a href="/collection_reg"><img src="resources/img/mypage/mycon-3.png" /></a>';
-		conBtn.innerHTML += '<a href="javascript:myWorkRegBtn();"><img src="resources/img/mypage/mycon-1.png" /></a>';
+		//conBtn.innerHTML += '<a href="/myPage/collection_reg"><img src="/resources/img/mypage/mycon-3.png" /></a>';
+		conBtn.innerHTML += '<a href="javascript:myWorkRegBtn();"><img src="/resources/img/mypage/mycon-1.png" /></a>';
 		$("#totalCollection").addClass("active");
 		workList();
 		masonryLayout();
@@ -514,7 +514,7 @@ jQuery(document).ready(function() {
 });     
 
 function myWorkRegBtn(){
-	location.href="/myWorkListReg"
+	location.href="/myPage/myWorkListReg"
 }
 
 //나의 작품 검색 엔터키 누르면
@@ -545,22 +545,22 @@ function searchMyWork(){
 }
 //작품 상세 페이지 이동
 function workDetail(sq){
-	location.href = "/workDetail?workSq="+sq;
+	location.href = "/deal/workDetail?SqNumber="+sq;
 }
 //구매 상세 페이지 이동
 function dealDetail(sq){
-	location.href = "/bidding?dealSq="+sq;
+	location.href = "/deal/bidding?SqNumber="+sq;
 }
 //판매완료 상세 페이지 이동
 function soldoutDetail(sq){
-	location.href = "/soldoutDetail?dealSq="+sq;	
+	location.href = "/deal/soldoutDetail?SqNumber="+sq;	
 }
 //작품 검색
 function workList(callback){
 	searchOptions.mbrSq = sMbrSqVal;
 	$.ajax({
         type: "post",
-        url: "/myWorkListSearch",
+        url: "/myPage/myWorkListSearch",
         data: searchOptions,
         success: function(data) {
         	result = data.result;
@@ -610,7 +610,7 @@ function workList(callback){
     					if(result[i].artstProfileImgUrl != null && result[i].artstProfileImgUrl != ""){
     						workListHtml += '		<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
     					}else{
-    						workListHtml += '		<img src="resources/img/de/ues-icon.png"/>';
+    						workListHtml += '		<img src="/resources/img/de/ues-icon.png"/>';
     					}
     					workListHtml += '		</div>';
     					workListHtml += '		<div class="text-s">';
@@ -674,7 +674,7 @@ function workList(callback){
     					if(result[i].artstProfileImgUrl != null && result[i].artstProfileImgUrl != ""){
     						workListHtml += '		<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
     					}else{
-    						workListHtml += '		<img src="resources/img/de/ues-icon.png"/>';
+    						workListHtml += '		<img src="/resources/img/de/ues-icon.png"/>';
     					}
     					workListHtml += '		</div>';
     					workListHtml += '		<div class="text-s">';
@@ -730,7 +730,7 @@ function workList(callback){
     					if(result[i].artstProfileImgUrl != null && result[i].artstProfileImgUrl != ""){
     						workListHtml += '		<img src="'+result[i].artstProfileImgUrl+'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
     		 			}else{
-    		 				workListHtml += '		<img src="resources/img/de/ues-icon.png"/>';
+    		 				workListHtml += '		<img src="/resources/img/de/ues-icon.png"/>';
     		 			}
     					workListHtml += '		</div>';
     					workListHtml += '		<div class="text-s">';
@@ -788,7 +788,7 @@ function workList(callback){
     					if(result[i].artstProfileImgUrl != null && result[i].artstProfileImgUrl != ""){
     						workListHtml += '		<img src="'+result[i].artstProfileImgUrl+'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
     		 			}else{
-    		 				workListHtml += '		<img src="resources/img/de/ues-icon.png"/>';
+    		 				workListHtml += '		<img src="/resources/img/de/ues-icon.png"/>';
     		 			}
     					workListHtml += '		</div>';
     					workListHtml += '		<div class="text-s">';
@@ -1135,7 +1135,7 @@ function workOpenYn(list, yn){
 	//공개처리 ajax후 reload
 	$.ajax({
         type: "post",
-        url: "/myWorkOpenYn",
+        url: "/myPage/myWorkOpenYn",
         data: param,
         success: function(data) {
         	if(data.result > 0 && yn == "Y"){
@@ -1344,7 +1344,7 @@ $('.wdb-2').click(function(){
 		if(!isMobile){
 			modalConfirm("판매등록 페이지로 이동합니다.", function(confirm){
 				if(confirm){
-					location.href = "/dealReg?workSq="+workSq+"&&mbrSq="+sMbrSqVal;
+					location.href = "/deal/openDealReg?workSq="+workSq+"&&mbrSq="+sMbrSqVal;
 				}else{
 					$("input[name=chkWorkSq]").attr("disabled", false);
 					$("#selectedCount").text("(0)");
@@ -1365,7 +1365,7 @@ $('.wdb-2').click(function(){
 			});
 		}else{
 			if(confirm("판매 등록 페이지로 이동합니다.")){
-				location.href = "/dealReg?workSq="+workSq+"&&mbrSq="+sMbrSqVal;
+				location.href = "/deal/openDealReg?workSq="+workSq+"&&mbrSq="+sMbrSqVal;
 			}else{
 				$("input[name=chkWorkSq]").attr("disabled", false);
 				$("#selectedCount").text("(0)");
@@ -1431,7 +1431,7 @@ $('.wdb-3').click(function(e){
 		if(!isMobile){
 			modalConfirm("작품수정 페이지로 이동합니다.", function(confirm){
 				if(confirm){
-					location.href = "/myWorkListMod?workSq="+workSq;
+					location.href = "/myPage/myWorkListMod?workSq="+workSq;
 				}else{
 					$("input[name=chkWorkSq]").attr("disabled", false);
 					$("#selectedCount").text("(0)");
@@ -1452,7 +1452,7 @@ $('.wdb-3').click(function(e){
 			});
 		}else{
 			if(confirm("작품 수정 페이지로 이동합니다.")){
-				location.href = "/myWorkListMod?workSq="+workSq;
+				location.href = "/myPage/myWorkListMod?workSq="+workSq;
 			}else{
 				$("input[name=chkWorkSq]").attr("disabled", false);
 				$("#selectedCount").text("(0)");
@@ -1520,7 +1520,7 @@ $('.wdb-4').click(function(e){
 				if(confirm){
 					$.ajax({
 				        type: "post",
-				        url: "/dealTPyn",
+				        url: "/deal/dealTPyn",
 				        data: {
 				        	dealSq : dealSq
 				        },
@@ -1528,7 +1528,7 @@ $('.wdb-4').click(function(e){
 				        	if(data == "N"){
 				        		modalAlertShow("선택한 작품이 <b class='c-red dib'>응찰 또는 판매</b>가 되었습니다.", "reload");
 				        	}else{
-				        		location.href="/dealMod?dealSq="+dealSq;
+				        		location.href="/deal/openDealMod?dealSq="+dealSq;
 				        	}
 				        },
 				        error: function(error) {
@@ -1558,7 +1558,7 @@ $('.wdb-4').click(function(e){
 			if(confirm("판매 정보 수정 페이지로 이동합니다.")){
 				$.ajax({
 			        type: "post",
-			        url: "/dealTPyn",
+			        url: "/deal/dealTPyn",
 			        data: {
 			        	dealSq : dealSq
 			        },
@@ -1567,7 +1567,7 @@ $('.wdb-4').click(function(e){
 			        		alert("선택한 작품이 응찰 또는 판매가 되었습니다.");
 			        		location.reload();
 			        	}else{
-			        		location.href="/dealMod?dealSq="+dealSq;
+			        		location.href="/deal/openDealMod?dealSq="+dealSq;
 			        	}
 			        },
 			        error: function(error) {
@@ -1646,7 +1646,7 @@ $('.wdb-5').click(function(e){
 					//삭제 처리 ajax후 reload
 					$.ajax({
 				        type: "post",
-				        url: "/myWorkDelYn",
+				        url: "/myPage/myWorkDelYn",
 				        data: {
 				        	workSqList : workSqList
 				        },
@@ -1685,7 +1685,7 @@ $('.wdb-5').click(function(e){
 				//삭제 처리 ajax후 reload
 				$.ajax({
 			        type: "post",
-			        url: "/myWorkDelYn",
+			        url: "/myPage/myWorkDelYn",
 			        data: {
 			        	workSqList : workSqList
 			        },
@@ -1774,7 +1774,7 @@ $('.wdb-6').click(function(e){
 					//판매중단 처리 ajax후 reload
 					$.ajax({
 				        type: "post",
-				        url: "/myWorkDealDelete",
+				        url: "/myPage/myWorkDealDelete",
 				        data: {
 				        	dealSqList : dealSqList
 				        },
@@ -1823,7 +1823,7 @@ $('.wdb-6').click(function(e){
 				//판매중단 처리 ajax후 reload
 				$.ajax({
 			        type: "post",
-			        url: "/myWorkDealDelete",
+			        url: "/myPage/myWorkDealDelete",
 			        data: {
 			        	dealSqList : dealSqList
 			        },
