--- a/src/main/resources/templates/thymeleaf/fo/myPage/secession.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/secession.html
@@ -75,7 +75,7 @@
     	}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
 </head>
 
@@ -99,7 +99,7 @@
 									<p class="sd-1">1.  발송하는 메일 수신거부는 '마이페이지 > 설정'에서 확인하세요</p>
 									<p class="sd-1">2.  이용 불편 및 각종 문의 사항은 고객센터로 문의 주시면 성심 성의껏 답변 </p>
 									<div class="sd-link">
-										<a href="/customerService" class="sdl-a">자주 묻는 질문</a>
+										<a href="/about/customerService" class="sdl-a">자주 묻는 질문</a>
 										<a href="javascript:fnModalAlert();" class="sdl-a">1:1 온라인 문의</a>
 										<a href="javascript:void(0);" class="sdl-a">전화 문의: 02-1533-3024 (평일 AM 10:00 ~ PM 19:00)</a>
 									</div>
@@ -271,7 +271,7 @@ $('ul.dropdown-menu.mega-dropdown-menu').on('click', function(event){
     			if(callback){
     				$.ajax({
     		    		type: "post",
-    		    	    url: "/login",
+    		    	    url: "/member/login",
     		    	    data: {
     		    	    	loginId : loginId,
     						loginPw : loginPw
@@ -307,7 +307,7 @@ $('ul.dropdown-menu.mega-dropdown-menu').on('click', function(event){
     		param.password = password;
     		$.ajax({
 	    		type: "post",
-	    	    url: "/withdrawalSubmit",
+	    	    url: "/myPage/withdrawalSubmit",
 	    	    data: param,
 	    	    success: function(data) {
 	    	    	if(data == 1){
