--- a/src/main/resources/templates/thymeleaf/footer.html
+++ b/src/main/resources/templates/thymeleaf/footer.html
@@ -10,14 +10,14 @@
 			<div class="footer-box">
 				<div class="footer-nav">
 					<ul class="">
-						<li><a href="/termOfService">이용약관</a></li>
-						<li><a href="/privacyPolicy">개인정보처리방침</a></li>
-						<li><a href="/serviceIntro">고객센터</a></li>
+						<li><a href="/about/termOfService">이용약관</a></li>
+						<li><a href="/about/privacyPolicy">개인정보처리방침</a></li>
+						<li><a href="/about/serviceIntro">고객센터</a></li>
 					</ul>
 					<div class="footer-icon">
-						<!-- <a href="javascript:fnModalAlert();"><img src="resources/img/sns-f.jpg" /></a>
-						<a href="javascript:fnModalAlert();"><img src="resources/img/sns-t.jpg" /></a> -->
-						<a href="https://www.instagram.com/dealing_art/" target="_blank"><img src="resources/img/sns-i.jpg" /></a>
+						<!-- <a href="javascript:fnModalAlert();"><img src="/resources/img/sns-f.jpg" /></a>
+						<a href="javascript:fnModalAlert();"><img src="/resources/img/sns-t.jpg" /></a> -->
+						<a href="https://www.instagram.com/dealing_art/" target="_blank"><img src="/resources/img/sns-i.jpg" /></a>
 					</div>
 				</div>
 				
