--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -91,7 +91,7 @@
     	.swiper-slide{background-color:rgb(255 255 255 / 0%);}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 <body>
 	<div class="wrap">
@@ -105,20 +105,20 @@
 						<div class="swiper-wrapper">
 							
 							<!-- <div class="swiper-slide" align="center" style="background-color:#ffffff;">
-								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="resources/img/banner-20_pc.jpg" border="0"/></a>
+								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="/resources/img/banner-20_pc.jpg" border="0"/></a>
 							</div> -->
 							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
 							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
-								<img src="resources/img/DA_banner_pc_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
+								<img src="/resources/img/DA_banner_pc_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
-								<img src="resources/img/banner-21_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
+								<img src="/resources/img/banner-21_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide" align="center" style="background-color:#ffffff;">
-								<img src="resources/img/banner-12_pc.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
+								<img src="/resources/img/banner-12_pc.png" onclick="javascript:location.href='/mgz9/insights';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide" align="center" style="background-color:#fe4d01;">
-								<img src="resources/img/banner-13_pc.jpg" onclick="javascript:location.href='/media';" style="cursor:pointer;"/>
+								<img src="/resources/img/banner-13_pc.jpg" onclick="javascript:location.href='/mgz9/media';" style="cursor:pointer;"/>
 							</div>
 						</div>
 						<div class="swiper-pagination swpa-1"></div>
@@ -133,20 +133,20 @@
 						<div class="swiper-wrapper">
 						
 							<!-- <div class="swiper-slide" align="center" style="background-color:#ffffff;">
-								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="resources/img/banner-20_pc.jpg" border="0"/></a>
+								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="/resources/img/banner-20_pc.jpg" border="0"/></a>
 							</div> -->
 							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
 							<div class="swiper-slide">
-								<img src="resources/img/DA_banner_pc_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
+								<img src="/resources/img/DA_banner_pc_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
-								<img src="resources/img/banner-21_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet';" style="cursor:pointer;"/>
+								<img src="/resources/img/banner-21_pc.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
-								<img src="resources/img/banner-12_pc.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
+								<img src="/resources/img/banner-12_pc.png" onclick="javascript:location.href='/mgz9/insights';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
-								<img src="resources/img/banner-13_tablet.jpg" onclick="javascript:location.href='/media';" style="cursor:pointer;"/>
+								<img src="/resources/img/banner-13_tablet.jpg" onclick="javascript:location.href='/mgz9/media';" style="cursor:pointer;"/>
 							</div>
 
 
@@ -164,20 +164,20 @@
 						<div class="swiper-wrapper">
 							
 							<!-- <div class="swiper-slide" align="center" style="background-color:#ffffff;">
-								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="resources/img/banner-20_mobile.jpg" border="0"/></a>
+								<a href="https://promo.dealing-art.com/dp/collectors-loving-ittem" target="_blank"><img src="/resources/img/banner-20_mobile.jpg" border="0"/></a>
 							</div> -->
 							<!--/* 메인 배너 추가 (2023-01-18) : 정대현 */-->
 							<div class="swiper-slide">
-								<img src="resources/img/DA_banner_mobile_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
+								<img src="/resources/img/DA_banner_mobile_230516.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/dp/da_1st';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
-								<img src="resources/img/banner-21_mobile.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
+								<img src="/resources/img/banner-21_mobile.png" onclick="javascript:location.href='https://promo.dealing-art.com/2023/auto_action_bidding_5percet?utm_source=landingpage&utm_medium=MainBanner&utm_campaign=action_bidding_5percet ';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
-								<img src="resources/img/banner-12_mobile.png" onclick="javascript:location.href='/insights';" style="cursor:pointer;"/>
+								<img src="/resources/img/banner-12_mobile.png" onclick="javascript:location.href='/mgz9/insights';" style="cursor:pointer;"/>
 							</div>
 							<div class="swiper-slide">
-								<img src="resources/img/banner-13_mobile.jpg" onclick="javascript:location.href='/media';" style="cursor:pointer;"/>
+								<img src="/resources/img/banner-13_mobile.jpg" onclick="javascript:location.href='/mgz9/media';" style="cursor:pointer;"/>
 							</div>
 
 
@@ -203,8 +203,8 @@
 						<div class="swiper-pagination swpa-2 pc-no"></div>	
 					</div>	
 					
-					<div class="swiper-button-next InPrevSwiper2 sbn ta-no"><span><img src="resources/img/arr-r.jpg"></span></div>
-					<div class="swiper-button-prev InNextSwiper2 sbp ta-no"><span><img src="resources/img/arr-l.jpg"></span></div>
+					<div class="swiper-button-next InPrevSwiper2 sbn ta-no"><span><img src="/resources/img/arr-r.jpg"></span></div>
+					<div class="swiper-button-prev InNextSwiper2 sbp ta-no"><span><img src="/resources/img/arr-l.jpg"></span></div>
 					
 				</div>
 			</div>
@@ -217,7 +217,7 @@
 				<div class="iframe-sum">
 					<div class="ifb-left">
 						<h3>작가와 콜렉터<br />콜렉터와 콜렉터<br />온라인 미술품 직거래는</h3>
-						<img src="resources/img/logo2.png" class="ifb-img" />
+						<img src="/resources/img/logo2.png" class="ifb-img" />
 					</div>
 					<div class="iframe-box">
 						<h3>미술품 거래 왜 이렇게 복잡한가요? </h3>
@@ -228,35 +228,35 @@
 					<div class="da-snm">
 						<ul class=""><!-- 0808 da-p1 이부분 추가했습니다 -->
 							<li>
-								<img src="resources/img/img-1.png" />
+								<img src="/resources/img/img-1.png" />
 								<p class="da-p1 pc-on">안전한 거래</p>
 								<p class="da-p1 ta-on">안전한<br/>거래</p>
 								<p class="da-p2 pc-on">딜링아트를 통한 거래는<br/>안전합니다.</p>
 								<p class="da-p2 ta-on">딜링아트를 통한<br/>거래는 안전합니다.</p>
 							</li>
 							<li>
-								<img src="resources/img/img-2.png" />
+								<img src="/resources/img/img-2.png" />
 								<p class="da-p1 pc-on">공개경매</p>
 								<p class="da-p1 ta-on">공개<br/>경매</p>
 								<p class="da-p2 pc-on">경매 진행 현황을<br/>실시간으로 확인하세요.</p>
 								<p class="da-p2 ta-on">경매 진행 현황을<br/>실시간으로 확인하세요.</p>
 							</li>
 							<li>
-								<img src="resources/img/img-3.png" />
+								<img src="/resources/img/img-3.png" />
 								<p class="da-p1 pc-on">온라인 결제</p>
 								<p class="da-p1 ta-on">온라인<br/>결제</p>
 								<p class="da-p2 pc-on">번거로운 작품 거래. 더 이상<br/>직접 움직일 필요가 없습니다.</p>
 								<p class="da-p2 ta-on">번거로운 작품 거래<br/>간편하게 결재하시요.</p>
 							</li>
 							<li>
-								<img src="resources/img/img-4.png" />
+								<img src="/resources/img/img-4.png" />
 								<p class="da-p1 pc-on">저렴한 수수료</p>
 								<p class="da-p1 ta-on">저렴한<br/>수수료</p>
 								<p class="da-p2 pc-on">비상식적인 미술품 거래 수수료<br/>거품을 제거했습니다.</p>
 								<p class="da-p2 ta-on">비상식적인 미술품 거래<br/>거품을 제거했습니다.</p>
 							</li>
 							<li>
-								<img src="resources/img/img-5.png" />
+								<img src="/resources/img/img-5.png" />
 								<p class="da-p1 pc-on">간편한 등록</p>
 								<p class="da-p1 ta-on">간편한<br/>등록</p>
 								<p class="da-p2 pc-on">보증서만 업로드 하면<br/>딜링아트에서 입력해 드립니다.</p>
@@ -277,8 +277,8 @@
 						<div class="swiper-wrapper" id="newDeal"></div>
 						<div class="swiper-pagination swpa-2 pc-no"></div>
 					</div>
-					<div class="swiper-button-next InNextSwiper3 sbn ta-no"><span><img src="resources/img/arr-r.jpg"></span></div>
-					<div class="swiper-button-prev InPrevSwiper3 sbp ta-no"><span><img src="resources/img/arr-l.jpg"></span></div>
+					<div class="swiper-button-next InNextSwiper3 sbn ta-no"><span><img src="/resources/img/arr-r.jpg"></span></div>
+					<div class="swiper-button-prev InPrevSwiper3 sbp ta-no"><span><img src="/resources/img/arr-l.jpg"></span></div>
 				</div>
 				<!-- <div class="text-center">
 					<button type="button" class="btn-more ta-no"><span>more</span></button>
@@ -303,8 +303,8 @@
 						
 						<div class="swiper-pagination swpa-2 pc-no"></div>
 					</div>
-					<div class="swiper-button-prev InPrev sbp ta-no" style="left:auto;float:left"><span><img src="resources/img/arr-l.jpg"></span></div>
-					<div class="swiper-button-next InNext sbn ta-no" style="right:auto;"><span><img src="resources/img/arr-r.jpg"></span></div>
+					<div class="swiper-button-prev InPrev sbp ta-no" style="left:auto;float:left"><span><img src="/resources/img/arr-l.jpg"></span></div>
+					<div class="swiper-button-next InNext sbn ta-no" style="right:auto;"><span><img src="/resources/img/arr-r.jpg"></span></div>
 					
 			    	
 			    	
@@ -322,8 +322,8 @@
 					<div class="swiper mySwiper4">
 						<div class="swiper-wrapper cn-b" id="updatedArtist"></div>
 					</div>
-					<div class="swiper-button-next  InNextSwiper4 sbn ta-no"><span><img src="resources/img/arr-r.jpg"></span></div>
-					<div class="swiper-button-prev  InPrevSwiper4 sbp ta-no"><span><img src="resources/img/arr-l.jpg"></span></div>
+					<div class="swiper-button-next  InNextSwiper4 sbn ta-no"><span><img src="/resources/img/arr-r.jpg"></span></div>
+					<div class="swiper-button-prev  InPrevSwiper4 sbp ta-no"><span><img src="/resources/img/arr-l.jpg"></span></div>
 				</div>
 			</div>
 			
@@ -341,7 +341,7 @@
 		<div class="modal-content">
 			<div class="modal-header" style="padding: 0;min-height: 0;">
 				<div class="baegs">
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="/resources/img/ba/icon-end.png" /></div>
 				</div>
 			</div>
 			
@@ -360,11 +360,11 @@
 		<div class="modal-content">
 			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
 				<div class="baegs">
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="/resources/img/ba/icon-end.png" /></div>
 				</div>
 			</div>
 			<div class="modal-body login-body">
-				<img src="resources/img/icon/login-logo.png"  class="login-logo"/>
+				<img src="/resources/img/icon/login-logo.png"  class="login-logo"/>
 				<div class="login-box">
 					<p class="lb-p1" id="emBoardTitle"></p>
 					<div class="text-box1" id="emBoardContent">
@@ -796,49 +796,24 @@
 	}
     //응찰하기 페이지로 이동
     function workDetail(workSq){
-  		location.href = "/bidding?workSq="+workSq;
+    	var requestUrl = "/deal/bidding";
+		loginCheck(requestUrl,workSq);
   	}
     
     //비딩페이지로 이동
     function dealDetail(dealSq){
-    	if(sMbrSqVal == "" || sMbrSqVal == null){
-    		$(".close").trigger("click");
-    		modalConfirm("로그인 후 이용 하실 수 있습니다..<br><br>확인 버튼을 누르시면 로그인 페이지로 이동합니다.", function(confrim){
-    			if(confrim){
-    				$("#loginModal").modal("show");	
-    			}
-    		});
-    	}else{
-	  		location.href = "/bidding?dealSq="+dealSq;
-    	}
+    	var requestUrl = "/deal/bidding";
+		loginCheck(requestUrl,dealSq);
   	}
     
   //mgz>Insights 이동
     function mgzDetail(mgzSq){
-    	if(sMbrSqVal == "" || sMbrSqVal == null){
-    		$(".close").trigger("click");
-    		modalConfirm("로그인 후 이용 하실 수 있습니다..<br><br>확인 버튼을 누르시면 로그인 페이지로 이동합니다.", function(confrim){
-    			if(confrim){
-    				$("#loginModal").modal("show");	
-    			}
-    		});
-    	}else{
-	  		location.href = "insights?mgzSq="+mgzSq;
-    	}
+	  	location.href = "/mgz9/insights?mgzSq="+mgzSq;
   	}
     
     function artstDetail(artstSq){
-    	if(sMbrSqVal == "" || sMbrSqVal == null){
-    		$(".close").trigger("click");
-    		modalConfirm("로그인 후 이용 하실 수 있습니다..<br><br>확인 버튼을 누르시면 로그인 페이지로 이동합니다.", function(confrim){
-    			if(confrim){
-    				$("#loginModal").modal("show");	
-    			}
-    		});
-    	}else{
-    		location.href = "/artistDetail?artstSq="+artstSq;
-    	}
-    	
+    	var requestUrl = "/artist/artistDetail";
+		loginCheck(requestUrl,artstSq);   	
     }
   	/*
      * MGZ9 상세 조회
@@ -849,7 +824,7 @@
      	
      	$.ajax({
              type: "post",
-             url: "/selectMgz9Dtl",
+             url: "/mgz9/selectMgz9Dtl",
              data:{
             	 mgzSq : mgzSq
      		},
@@ -972,7 +947,7 @@
  	 
  	 var mloginUrl = window.location.pathname;
  	 
- 	 if(mloginUrl =="/mlogin" ){
+ 	 if(mloginUrl =="/main/mlogin" ){
  		$('#loginModal').modal('show');
  	 }
  	
