--- a/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/serviceIntro.html
@@ -76,7 +76,7 @@
     	.swiper-slide{background-color:rgb(255 255 255 / 0%);}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 <body>
 	<div class="wrap">
@@ -88,17 +88,17 @@
 					<div class="aobut-top">
 						<div class="mgz-link">
 							<ul class="mgz-ul">
-								<li class="active"><a href="/serviceIntro">서비스 소개</a></li>
+								<li class="active"><a href="/about/serviceIntro">서비스 소개</a></li>
 								<!-- /notice -->
-								<li><a href="/notice">공지사항</a></li>
+								<li><a href="/about/notice">공지사항</a></li>
 								<!-- /customerService -->
-								<li><a href="/customerService">자주 묻는 질문</a></li>
+								<li><a href="/about/customerService">자주 묻는 질문</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="about-body">
 						<div class="top-san1">
-							<div class="ts-mo"><img src="resources/img/about/mo-bg.jpg" class="max-img"/></div>
+							<div class="ts-mo"><img src="/resources/img/about/mo-bg.jpg" class="max-img"/></div>
 							<div class="about-div max-1200">
 								<div class="about-st1">
 									<h3>국내 최초<br/>개인간 미술품 거래 플랫폼</h3>
@@ -117,7 +117,7 @@
 									</p>
 								</div>
 								<div class="about-st2">
-									<div><img src="resources/img/about/banner-bg1.png" /></div>
+									<div><img src="/resources/img/about/banner-bg1.png" /></div>
 								</div>
 							</div>
 							
@@ -145,11 +145,11 @@
 							<ul class="wei-ul2">
 								<li>
 									<div class="wei-list">
-										<img src="resources/img/about/icon-1.png"  class="wei-img" />
+										<img src="/resources/img/about/icon-1.png"  class="wei-img" />
 										<div class="wl-div">
 											<!-- 
 											* [수수료 변경 Task]
-											* 서비스 소개(http://localhost/serviceIntro) 
+											* 서비스 소개(http://localhost/about/serviceIntro) 
 											* 내용 : 간편한 거래 수수료 텍스트 변경
 											* 구매자 10% -> 5% 변경 (2023-01-16) : 정대현
 											-->
@@ -160,7 +160,7 @@
 								</li>
 								<li>
 									<div class="wei-list">
-										<img src="resources/img/about/icon-2.png"  class="wei-img" />
+										<img src="/resources/img/about/icon-2.png"  class="wei-img" />
 										<div class="wl-div">
 											<h3>투명한 거래</h3>
 											<p>딜링아트는 경매 과정과 결과를 투명하게 공개합니다. 이를 통해 기존 미술 시장의 폐쇄성을 해결하고 미술시장의 투명성과 신뢰성을 높이고자 합니다. 딜링아트를 통해 누적된 미술품 거래 정보는 국내 미술시장 현황과 작품가 변동추이를 측정할 수 있는 기준으로 작용할 것입니다.</p>
@@ -169,7 +169,7 @@
 								</li>
 								<li>
 									<div class="wei-list">
-										<img src="resources/img/about/icon-3.png"  class="wei-img" />
+										<img src="/resources/img/about/icon-3.png"  class="wei-img" />
 										<div class="wl-div">
 											<h3>안전한 거래</h3>
 											<p>딜링아트에서는 작품 보증서를 통해 공인된 작품만을 거래할 수 있으며, 모든 결제는 딜링아트의 결제 시스템을 통해 안전하게 이루어집니다. 거래가 성사되는 즉시 판매자와 구매자간 거래계약서가 생성되며 작품의 컨디션 체크부터 운송, 설치까지 미술작품 전문 운송기사가 안전하게 작품을 전달해드립니다.</p>
