--- a/src/main/resources/templates/thymeleaf/fo/about/terms_3.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/terms_3.html
@@ -76,7 +76,7 @@
     	.swiper-slide{background-color:rgb(255 255 255 / 0%);}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 
 <body>
@@ -91,8 +91,8 @@
 				
 				<div class="terms-wrap">
 					<ul class="nav nav-tabs">
-						<li><a href="/termOfService">이용약관</a></li>
-						<li><a href="/privacyPolicy">개인정보처리방침</a></li>
+						<li><a href="/about/termOfService">이용약관</a></li>
+						<li><a href="/about/privacyPolicy">개인정보처리방침</a></li>
 						<li class='active'><a href="#">마케팅 및 광고성 정보 수신에 대한 동의</a></li>
 					</ul>
 					<div class="tab-content">
