--- a/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/dealReg.html
@@ -93,7 +93,7 @@
 		}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 
 <body>
@@ -118,7 +118,7 @@
 							<div class="med-ic">
 								<div class="por">
 									<div class="tootip-4">거래 전<br/>꼭! 확인하세요</div>
-									<img src="resources/img/ba/me-icon.png" class="med-me" />
+									<img src="/resources/img/ba/me-icon.png" class="med-me" />
 								</div>
 							</div>
 							<div class="med-box radio-2">
@@ -160,12 +160,12 @@
 						<div class="med">
 							<h2 id="bidOrSale" style="display:inline-block;">경매 시작가</h2>
 							<div style="margin-left:15px;display:inline-block;">판매수수료 
-								<button id="btn_bidOrSale"><img src="resources/img/ba/me-icon.png" class="med-me" /></button>
+								<button id="btn_bidOrSale"><img src="/resources/img/ba/me-icon.png" class="med-me" /></button>
 								
 								<div class="Toggle" style="display:none">
 									<div class="toggle_box1">
 										<div class="toggle_bar1">판매수수료</div>
-										<div class="toggle_close" id="bidOrSale_close"><img src="resources/img/ba/icon-end_1.png"></div>
+										<div class="toggle_close" id="bidOrSale_close"><img src="/resources/img/ba/icon-end_1.png"></div>
 									</div>
 									<div class="toggle_con1">
 										<table>
@@ -472,8 +472,8 @@
 			<div class="modal-header">
 				<div class="baegs">
 					<h2>거래 등록 전 <br/>꼭! 확인하세요</h2>
-				    <img src="resources/img/ba/icon-1.png" class="con-img" />
-				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="resources/img/ba/icon-end.png" /></div> -->
+				    <img src="/resources/img/ba/icon-1.png" class="con-img" />
+				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="/resources/img/ba/icon-end.png" /></div> -->
 				</div>
 
 			</div>
@@ -500,7 +500,7 @@
 		<div class="modal-content">
 			<div class="modal-header" style="height: 0; min-height: 0; padding: 0;">
 				<div class="baegs">
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="/resources/img/ba/icon-end.png" /></div>
 				</div>
 
 			</div>
@@ -528,7 +528,7 @@
 				<div class="baegs">
 					<h2>거래 등록 유의사항</h2>
 				    <img src="/resources/img/ba/icon-2.png" class="con-img" />
-				    <div class="close" onclick="dealRegNotesModalClose()"><img src="resources/img/ba/icon-end_1.png" /></div>
+				    <div class="close" onclick="dealRegNotesModalClose()"><img src="/resources/img/ba/icon-end_1.png" /></div>
 				</div>
 
 			</div>
@@ -616,7 +616,7 @@
 											<div class="check-info">
 												<p>
 													작품 판매에 대한 수수료가 부과됩니다.
-													<button id="btn_toggle"><img src="resources/img/ba/me-icon.png"></button>
+													<button id="btn_toggle"><img src="/resources/img/ba/me-icon.png"></button>
 												</p>
 												
 											</div>
@@ -626,7 +626,7 @@
 										<div id="Toggle" style="display:none;">
 											<div class="toggle_box1">
 												<div class="toggle_bar1">판매수수료</div>
-												<div class="toggle_close" id="toggle_close"><img src="resources/img/ba/icon-end_1.png"></div>
+												<div class="toggle_close" id="toggle_close"><img src="/resources/img/ba/icon-end_1.png"></div>
 											</div>
 											<div class="toggle_con1">
 												<table>
@@ -1078,7 +1078,7 @@ function event(cd){
 		var workTypCd = cd;
 		$.ajax({
 	        type: "post",
-	        url: "/myCouponList",
+	        url: "/myPage/myCouponList",
 	        data:{
 				mbrSq : sMbrSqVal
 			},
@@ -1099,7 +1099,7 @@ function event(cd){
         			
         			$.ajax({
        			        type: "post",
-       			        url: "/myRegCoupon",
+       			        url: "/myPage/myRegCoupon",
        			        data:{
        						mbrSq : sMbrSqVal,
        						cuponIdntfctnNum : "82X9-JB4L-FSOS-E66S"
@@ -1511,7 +1511,7 @@ function keywrdSet(obj){
 	var keywrdList = obj.value.split(',');
 	var keywrdHtml = '';
 	for(var i=0; i<keywrdList.length; i++){
-		keywrdHtml += '<div id="keywrd'+i+'"><span>'+keywrdList[i]+'</span><img src="resources/img/mypage/icon-x.png" class="keywrdList" keywrdSq="'+i+'" value="'+keywrdList[i]+'"/></div>';
+		keywrdHtml += '<div id="keywrd'+i+'"><span>'+keywrdList[i]+'</span><img src="/resources/img/mypage/icon-x.png" class="keywrdList" keywrdSq="'+i+'" value="'+keywrdList[i]+'"/></div>';
 	}
 	$(".key-box").empty();
 	$(".key-box").append(keywrdHtml).trigger("create");
@@ -1774,7 +1774,7 @@ function dealReg(){
 	    
 	    $.ajax({
 	        type: "post",
-	        url: "/dealReg/reg",
+	        url: "/deal/dealReg",
 	        data: formData,
 	        contentType : false,
 	        processData : false,
