--- a/src/main/resources/templates/thymeleaf/fo/event/event_v1.html
+++ b/src/main/resources/templates/thymeleaf/fo/event/event_v1.html
@@ -76,18 +76,18 @@
     	.swiper-slide{background-color:rgb(255 255 255 / 0%);}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     <!-- 웹폰트 -->
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 	
-    <link type="text/css" rel="stylesheet" href="resources/css/event_css/font.css" />
-	<link type="text/css" rel="stylesheet" href="resources/css/event_css/bootstrap.min.css">
-	<link type="text/css"rel="stylesheet" href="resources/css/event_css/common_pc.css">
-	<link type="text/css" media="screen and (max-width: 1319px)" rel="stylesheet" href="resources/css/event_css/ui_mo.css" />
-	<link type="text/css" media="screen and (min-width: 1320px)" rel="stylesheet" href="resources/css/event_css/ui_pc.css" />
+    <link type="text/css" rel="stylesheet" href="/resources/css/event_css/font.css" />
+	<link type="text/css" rel="stylesheet" href="/resources/css/event_css/bootstrap.min.css">
+	<link type="text/css"rel="stylesheet" href="/resources/css/event_css/common_pc.css">
+	<link type="text/css" media="screen and (max-width: 1319px)" rel="stylesheet" href="/resources/css/event_css/ui_mo.css" />
+	<link type="text/css" media="screen and (min-width: 1320px)" rel="stylesheet" href="/resources/css/event_css/ui_pc.css" />
 </head>
 
 <body>
@@ -195,7 +195,7 @@
 			</div>
 			
 			<div class="btn-box">
-				<a href="/joinStep1" class="btn-1"><span class="dib"><span class="b">회원가입</span>하고</span>이벤트 <span class="b">참여하기!</span></a>
+				<a href="/main/joinStep1" class="btn-1"><span class="dib"><span class="b">회원가입</span>하고</span>이벤트 <span class="b">참여하기!</span></a>
 			</div>
 			
 			<div class="footer-wrap">
