--- a/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/collection_reg.html
@@ -87,7 +87,7 @@
 		}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
 </head>
 
@@ -112,9 +112,9 @@
 							
 							<div class="input-gra" data-toggle="modal" data-target="#searchArtstModal">
 								<input type="text" placeholder="작가명으로 검색해 보세요." style="cursor:pointer"/>
-								<!-- <a href="javascript:void(0);" onclick=><img src="resources/img/mypage/icon-sech.png" /></a> -->
+								<!-- <a href="javascript:void(0);" onclick=><img src="/resources/img/mypage/icon-sech.png" /></a> -->
 								<!-- onclick= 제거  -->
-								<a href="javascript:void(0);"><img src="resources/img/mypage/icon-sech.png" /></a>
+								<a href="javascript:void(0);"><img src="/resources/img/mypage/icon-sech.png" /></a>
 							</div>
 							
 							<table class="mstyle-2">
@@ -141,7 +141,7 @@
 						<div class="myd-box-2">
 							<div class="input-gra" data-toggle="modal" data-target="#searchWorkModal">
 								<input type="text" placeholder="작품명으로 검색해 보세요." style="cursor:pointer"/>
-								<a href="javascript:void(0);"><img src="resources/img/mypage/icon-sech.png" /></a>
+								<a href="javascript:void(0);"><img src="/resources/img/mypage/icon-sech.png" /></a>
 							</div>
 						</div>
 					</div>
@@ -434,7 +434,7 @@
 					<div class="bat-box5">
 						<button type="button" class="ba-btn1" onclick="collectionReg()"><span>등록하기</span></button>
 						<button type="button" class="ba-btn3" onclick="collectionStorage()"><span>임시저장</span></button>
-						<button type="button" class="ba-btn3" onclick='javascript:pageGoPost({url:"/myCollection",target:"_self",vals:[["mbrSq", sMbrSqVal]]});'><span>취소</span></button>
+						<button type="button" class="ba-btn3" onclick='javascript:pageGoPost({url:"/myPage/myCollection",target:"_self",vals:[["SqNumber", sMbrSqVal]]});'><span>취소</span></button>
 					</div>
 					
 					
@@ -461,7 +461,7 @@
 				<!-- 검색버튼 클릭시 -->
 				<div class="search-show">
 					<div class="sea-box">
-						<img src="resources/img/newdalogo.png" class="sea-img" style="width:237px;" />
+						<img src="/resources/img/newdalogo.png" class="sea-img" style="width:237px;" />
 						
 						<div class="sea-won">
 							<!-- <div class="select-box">
@@ -470,7 +470,7 @@
 								</select>
 							</div> -->
 							<input type="text" id="txt_searchArtst" placeholder="작가명으로 검색해 보세요." onkeyup="searchArtst()"/>
-							<a href="#" style="cursor:default;"><img src="resources/img/icon-2.jpg" /></a>
+							<a href="#" style="cursor:default;"><img src="/resources/img/icon-2.jpg" /></a>
 						</div>
 						<ul class="collsul" id="ul_searchArtst">
 						</ul>
@@ -496,7 +496,7 @@
 				<!-- 검색버튼 클릭시 -->
 				<div class="search-show">
 					<div class="sea-box">
-						<img src="resources/img/w-logo.jpg" class="sea-img" />
+						<img src="/resources/img/w-logo.jpg" class="sea-img" />
 						
 						<div class="sea-won">
 							<!-- <div class="select-box">
@@ -505,7 +505,7 @@
 								</select>
 							</div> -->
 							<input type="text" id="txt_searchWork" placeholder="작품명으로 검색해 보세요." onkeyup="searchWork()"/>
-							<a href="#" style="cursor:default;"><img src="resources/img/icon-2.jpg" /></a>
+							<a href="#" style="cursor:default;"><img src="/resources/img/icon-2.jpg" /></a>
 						</div>
 						<ul class="collsul" id="ul_searchWork">
 						</ul>
@@ -1032,7 +1032,7 @@ function collectionReg(){
     			if(confirm){
     				$.ajax({
     			        type: "post",
-    			        url: "/collectionReg",
+    			        url: "/myPage/collectionReg",
     			        data: formData,
     			        contentType : false,
     			        processData : false,
@@ -1240,7 +1240,7 @@ function keywrdSet(obj){
 	var keywrdList = obj.value.split(',');
 	var keywrdHtml = '';
 	for(var i=0; i<keywrdList.length; i++){
-		keywrdHtml += '<div id="keywrd'+i+'"><span>'+keywrdList[i]+'</span><img src="resources/img/mypage/icon-x.png" class="keywrdList" keywrdSq="'+i+'" value="'+keywrdList[i]+'"/></div>';
+		keywrdHtml += '<div id="keywrd'+i+'"><span>'+keywrdList[i]+'</span><img src="/resources/img/mypage/icon-x.png" class="keywrdList" keywrdSq="'+i+'" value="'+keywrdList[i]+'"/></div>';
 	}
 	$(".key-box").empty();
 	$(".key-box").append(keywrdHtml).trigger("create");
@@ -1259,7 +1259,7 @@ function searchArtst(){
 	var wordLength = $("#txt_searchArtst").val().trim().length;
 	if(wordLength > 1){
 		$.ajax({
-			url:"/searchArtst",
+			url:"/myPage/searchArtst",
 			type:"post",
 	      data: {
 	      	searchKeyword : searchKeyword
@@ -1330,7 +1330,7 @@ function selectArtst(obj){
 function searchWork(){
 	var searchKeyword = $("#txt_searchWork").val();
 	$.ajax({
-		url:"/searchWork",
+		url:"/myPage/searchWork",
 		type:"post",
       data: {
       	searchKeyword : searchKeyword
@@ -1384,7 +1384,7 @@ function selectWork(obj){
 	$("#searchWorkModal").modal("hide");
 	var workSq = obj.attributes.workSq.value;
 	$.ajax({
-		url:"/selectWork",
+		url:"/myPage/selectWork",
 		type:"post",
       data: {
       	workSq : workSq
