--- a/src/main/resources/templates/thymeleaf/fo/myPage/coupon.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/coupon.html
@@ -78,7 +78,7 @@
     	}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
 </head>
 
@@ -232,7 +232,7 @@ function myCouponList(searchCondition){
 	
 	$.ajax({
         type: "post",
-        url: "/myCouponList",
+        url: "/myPage/myCouponList",
         data:{
 			mbrSq : sMbrSqVal
 		},
@@ -332,7 +332,7 @@ function myRegCoupon(){
 	}else{
 		$.ajax({
 	        type: "post",
-	        url: "/myRegCoupon",
+	        url: "/myPage/myRegCoupon",
 	        data:{
 				mbrSq : sMbrSqVal,
 				cuponIdntfctnNum : $("#inp_cuponNum").val()
