--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy_backup.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_buy_backup.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<script type="text/javascript" src="resources/js/com.js"></script>
-<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select2.css">
+<script type="text/javascript" src="/resources/js/com.js"></script>
+<link type="text/css" rel="stylesheet" href="/resources/css/bootstrap-select2.css">
 <head>
 	<title>딜링아트</title>
 	<meta charset="utf-8">
@@ -81,7 +81,7 @@
     	}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
     
     
@@ -102,12 +102,12 @@
 									<div class="med-ic">
 										<div class="por d_i_b">
 										<div class="tootip-4">거래 계약 안내</div>
-										<img src="resources/img/mypage/icon-1.png" class="med-me">
+										<img src="/resources/img/mypage/icon-1.png" class="med-me">
 									</div>
 									<div class="por d_i_b mg_l30" th:if="${not #strings.equals(result.dealInfo.dealSttsCd, 'TP')}">
 										<a href="javascript:openWorkGrtUrl();" class="mg_l30 por" >
 										<div class="tootip-2">보증서 보기</div>
-										<img src="resources/img/de/print-icon.jpg"></a>
+										<img src="/resources/img/de/print-icon.jpg"></a>
 									</div>
 								</div>
 							<div class="myd-box">
@@ -242,11 +242,11 @@
 													<input type="radio" id="rd5" name="paymethod">
 													<label for="rd5">카카오페이</label>
 												</div> -->
-												<!-- <a href="javascript:void(0);" class="pay-1" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-2.png" /><span>신용카드</span></a> -->
-												<!-- <a href="#" class="pay-2" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-3.png" /><span>무통장입금</span></a> -->
-												<!-- <a href="javascript:void(0);" class="pay-3" value="ACCT" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-6.png" /><span>실시간계좌이체</span></a> -->
-												<!-- <a href="javascript:void(0);" class="pay-4" value="VACCT" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-4.png" /><span>가상계좌</span></a> -->
-												<!-- <a href="#" class="pay-5" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="resources/img/mypage/icon-5.png" /><span>카카오페이</span></a> -->
+												<!-- <a href="javascript:void(0);" class="pay-1" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="/resources/img/mypage/icon-2.png" /><span>신용카드</span></a> -->
+												<!-- <a href="#" class="pay-2" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="/resources/img/mypage/icon-3.png" /><span>무통장입금</span></a> -->
+												<!-- <a href="javascript:void(0);" class="pay-3" value="ACCT" onclick="btn_paymethod_onclick(this)"><img src="/resources/img/mypage/icon-6.png" /><span>실시간계좌이체</span></a> -->
+												<!-- <a href="javascript:void(0);" class="pay-4" value="VACCT" onclick="btn_paymethod_onclick(this)"><img src="/resources/img/mypage/icon-4.png" /><span>가상계좌</span></a> -->
+												<!-- <a href="#" class="pay-5" value="CARD" onclick="btn_paymethod_onclick(this)"><img src="/resources/img/mypage/icon-5.png" /><span>카카오페이</span></a> -->
 											</div>
 											<div class="bat-box3 mg_t30">
 												<span class="c-reds2">카드결제 : 거래수수료 11.5%</span>
@@ -552,8 +552,8 @@
 			<div class="modal-header">
 				<div class="baegs">
 					<h2>주소 변경</h2>
-				    <img src="resources/img/ba/icon-3.png" class="con-img" />
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end_1.png" /></div>
+				    <img src="/resources/img/ba/icon-3.png" class="con-img" />
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="/resources/img/ba/icon-end_1.png" /></div>
 				</div>
 			</div>
 			<div class="modal-body login-body">
@@ -584,7 +584,7 @@
 		<div class="modal-content">
 			<div class="modal-header" style="height: 0; min-height: 0; padding: 0;">
 				<div class="baegs">
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="/resources/img/ba/icon-end.png" /></div>
 				</div>
 
 			</div>
@@ -611,8 +611,8 @@
 			<div class="modal-header">
 				<div class="baegs">
 					<h2>거래 확인서가 준비되면<br/>안내해 드립니다.</h2>
-				    <img src="resources/img/ba/icon-1.png" class="con-img" />
-				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="resources/img/ba/icon-end.png" /></div> -->
+				    <img src="/resources/img/ba/icon-1.png" class="con-img" />
+				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="/resources/img/ba/icon-end.png" /></div> -->
 				</div>
 
 			</div>
@@ -638,8 +638,8 @@
 			<div class="modal-header">
 				<div class="baegs">
 					<h2>컨디션 체크가 준비되면<br/>안내해 드립니다.</h2>
-				    <img src="resources/img/ba/icon-1.png" class="con-img" />
-				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="resources/img/ba/icon-end.png" /></div> -->
+				    <img src="/resources/img/ba/icon-1.png" class="con-img" />
+				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="/resources/img/ba/icon-end.png" /></div> -->
 				</div>
 
 			</div>
@@ -880,7 +880,7 @@ function updateNewAddr(){
 	var mbrDelivryAddr = $("#txt_newAddr").val()+" "+$("#txt_newAddrDetail").val(); 
 	$.ajax({
 		type: "POST",
-        url: "/updateNewAddr",
+        url: "/myPage/updateNewAddr",
         data: {
         	mbrSq : sMbrSqVal,
         	mbrDelivryAddr : mbrDelivryAddr
@@ -1171,7 +1171,7 @@ window.call = function (data) {
 		$.ajax({
 			type: "POST",
 			contentType: "application/json",
-	        url: "/getTrnsprt",
+	        url: "/myPage/getTrnsprt",
 	        data: JSON.stringify(getTrnsprt),
 	        async: false,
 			success:function(data){
@@ -1192,7 +1192,7 @@ window.call = function (data) {
 			$.ajax({
 				type: "POST",
 				contentType: "application/json",
-		        url: "/insertTrnsprt",
+		        url: "/myPage/insertTrnsprt",
 		        data: JSON.stringify(param),
 		        async: false,
 				success:function(data){
@@ -1244,7 +1244,7 @@ $("#sbx_trnsprtTypCd").on("change", function(){
 			var innerText = "";
 			$.ajax({
 				type: "POST",
-		        url: "/selectTrnsprtInfo",
+		        url: "/myPage/selectTrnsprtInfo",
 		        data: {
 		        	trnsprtDivCd : "B", //구매자
 		    		trnsprtTypCd : document.getElementById("sbx_trnsprtTypCd").value, //운송 구분 코드
@@ -1288,7 +1288,7 @@ $("#sbx_trnsprtAreaCd").on("change", function(){
 		//부가서비스 선택 셀렉트 박스에 text, value 넣기
 		$.ajax({
 			type: "POST",
-	        url: "/selectTrnsprtInfo",
+	        url: "/myPage/selectTrnsprtInfo",
 	        data: {
 	        	trnsprtDivCd : "B", //구매자
 	    		trnsprtTypCd : document.getElementById("sbx_trnsprtTypCd").value, //운송 구분 코드
@@ -1323,7 +1323,7 @@ $("#sbx_trnsprtAreaCd").on("change", function(){
 		//운송 가격 표시하기
 		$.ajax({
 			type: "POST",
-	        url: "/selectTrnsprtInfo",
+	        url: "/myPage/selectTrnsprtInfo",
 	        data: {
 	        	trnsprtDivCd : "B", //구매자
 	    		trnsprtTypCd : document.getElementById("sbx_trnsprtTypCd").value, //운송 구분 코드
@@ -1408,7 +1408,7 @@ function getCouponList(cuponTypCd){
 		}
 	}
 	$.ajax({
-		url:"/myCouponList_payment",
+		url:"/myPage/myCouponList_payment",
 		type:"post",
         data: data,
 		success: function(data){
@@ -1509,7 +1509,7 @@ $("#sbx_couponList_TD").on("change", function(){
 	param.trnsprtServiceCdNm = $("#sbx_trnsprtServiceCd option:selected").text();
 	
 	$.ajax({
-		url:"/applyCupon",
+		url:"/myPage/applyCupon",
 		type:"post",
 		data: param,
 		success: function(data){
