--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_detail_sell.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<script type="text/javascript" src="resources/js/com.js"></script>
-<link type="text/css" rel="stylesheet" href="resources/css/bootstrap-select2.css">
+<script type="text/javascript" src="/resources/js/com.js"></script>
+<link type="text/css" rel="stylesheet" href="/resources/css/bootstrap-select2.css">
 <head>
 	<title>딜링아트</title>
 	<meta charset="utf-8">
@@ -81,7 +81,7 @@
     	}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
     
     
@@ -102,12 +102,12 @@
 									<div class="med-ic">
 										<div class="por d_i_b">
 										<div class="tootip-4">거래 계약 안내</div>
-										<img src="resources/img/mypage/icon-1.png" class="med-me">
+										<img src="/resources/img/mypage/icon-1.png" class="med-me">
 									</div>
 									<div class="por d_i_b mg_l30">
 										<a href="javascript:openWorkGrtUrl();" class="mg_l30 por">
 										<div class="tootip-2">보증서 보기</div>
-										<img src="resources/img/de/print-icon.jpg"></a>
+										<img src="/resources/img/de/print-icon.jpg"></a>
 									</div>
 								</div>
 							<div class="myd-box">
@@ -261,13 +261,13 @@
 											<div class="panel-body">
 												<input type="radio" id="r1" name="sellTrnsprtTypCd" value="P"/>
 												<label for="r1"><span></span>프리미엄 운송</label><span>(1,000만원 이상 작품 권장)</span>
-												<button onclick="$('#pToggle').toggle(); $('#gToggle').hide(); $('#dToggle').hide();"><img src="resources/img/ba/me-icon.png"></button><br/>
+												<button onclick="$('#pToggle').toggle(); $('#gToggle').hide(); $('#dToggle').hide();"><img src="/resources/img/ba/me-icon.png"></button><br/>
 	
 												<!--0901_프리미엄운송-->
 												<div id="pToggle" style="display:none" class="div_toggle">
 													<div class="toggle_box1">
 														<div class="toggle_bar1">프리미엄 운송</div>
-														<div class="toggle_close" onclick="$('#pToggle').hide();"><img src="resources/img/ba/icon-end_1.png"></div>
+														<div class="toggle_close" onclick="$('#pToggle').hide();"><img src="/resources/img/ba/icon-end_1.png"></div>
 													</div>
 													<div class="toggle_con1">
 														<table>
@@ -311,12 +311,12 @@
 	
 												<input type="radio" id="r2" name="sellTrnsprtTypCd" value="G"/>
 												<label for="r2"><span></span>일반 운송</label>
-												<button onclick="$('#gToggle').toggle(); $('#pToggle').hide(); $('#dToggle').hide();"><img src="resources/img/ba/me-icon.png"></button><br/>
+												<button onclick="$('#gToggle').toggle(); $('#pToggle').hide(); $('#dToggle').hide();"><img src="/resources/img/ba/me-icon.png"></button><br/>
 												
 												<div id="gToggle" style="display:none" class="div_toggle">
 													<div class="toggle_box1">
 														<div class="toggle_bar1">일반 운송</div>
-														<div class="toggle_close" onclick="$('#gToggle').hide();"><img src="resources/img/ba/icon-end_1.png"></div>
+														<div class="toggle_close" onclick="$('#gToggle').hide();"><img src="/resources/img/ba/icon-end_1.png"></div>
 													</div>
 													<div class="toggle_con1">
 														<table>
@@ -380,12 +380,12 @@
 												
 												<input type="radio" id="r3" name="sellTrnsprtTypCd" value="D"/>
 												<label for="r3"><span></span>셀프 운송</label>
-												<button onclick="$('#dToggle').toggle(); $('#pToggle').hide(); $('#gToggle').hide();"><img src="resources/img/ba/me-icon.png"></button><br/>
+												<button onclick="$('#dToggle').toggle(); $('#pToggle').hide(); $('#gToggle').hide();"><img src="/resources/img/ba/me-icon.png"></button><br/>
 												
 												<div id="dToggle" style="display:none" class="div_toggle">
 													<div class="toggle_box1">
 														<div class="toggle_bar1">셀프 운송</div>
-														<div class="toggle_close" onclick="$('#dToggle').hide();"><img src="resources/img/ba/icon-end_1.png"></div>
+														<div class="toggle_close" onclick="$('#dToggle').hide();"><img src="/resources/img/ba/icon-end_1.png"></div>
 													</div>
 													<div class="toggle_con1">
 														<table>
@@ -651,7 +651,7 @@
 												<tr>
 													<th>지급 수단</th>
 													<td th:if="${not #strings.isEmpty(result.mbrInfo.mbrAccountNo)}" th:text="|${result.mbrInfo.mbrBankNm} ${result.mbrInfo.mbrAccountNo}|">신한은행 000-000-0000</td>
-													<td th:unless="${not #strings.isEmpty(result.mbrInfo.mbrAccountNo)}"><a href="/memberEdit">정산 정보를 등록해주세요.</a></td>
+													<td th:unless="${not #strings.isEmpty(result.mbrInfo.mbrAccountNo)}"><a href="/myPage/memberEdit">정산 정보를 등록해주세요.</a></td>
 												</tr>
 												<tr>
 													<th>정산 내역</th>
@@ -698,7 +698,7 @@
 								<!-- <a href="#" class="ba-btn1" id="btn_payment" style="display:none;" onclick="call(200)"><span>결제하기</span></a> -->
 								<a href="javascript:void(0);" class="ba-btn1" id="btn_payment" style="display:none;" onclick="btn_payment()"><span>결제하기</span></a>
 								<a href="javascript:void(0);" class="ba-btn1" id="btn_dealingCall" style="display:none;" onclick="btn_dealingCall()"><span>딜링콜 요청</span></a>
-								<a href="javascript:location.href='/myDeal';" class="ba-btn2" ><span>돌아가기</span></a>
+								<a href="javascript:location.href='/myPage/myDeal';" class="ba-btn2" ><span>돌아가기</span></a>
 							</div>
 						</div>
 						
@@ -718,8 +718,8 @@
 			<div class="modal-header">
 				<div class="baegs">
 					<h2>주소 변경</h2>
-				    <img src="resources/img/ba/icon-3.png" class="con-img" />
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end_1.png" /></div>
+				    <img src="/resources/img/ba/icon-3.png" class="con-img" />
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="/resources/img/ba/icon-end_1.png" /></div>
 				</div>
 			</div>
 			<div class="modal-body login-body">
@@ -750,7 +750,7 @@
 		<div class="modal-content">
 			<div class="modal-header" style="height: 0; min-height: 0; padding: 0;">
 				<div class="baegs">
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end.png" /></div>
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="/resources/img/ba/icon-end.png" /></div>
 				</div>
 
 			</div>
@@ -777,8 +777,8 @@
 			<div class="modal-header">
 				<div class="baegs">
 					<h2>거래 확인서가 준비되면<br/>안내해 드립니다.</h2>
-				    <img src="resources/img/ba/icon-1.png" class="con-img" />
-				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="resources/img/ba/icon-end.png" /></div> -->
+				    <img src="/resources/img/ba/icon-1.png" class="con-img" />
+				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="/resources/img/ba/icon-end.png" /></div> -->
 				</div>
 
 			</div>
@@ -804,8 +804,8 @@
 			<div class="modal-header">
 				<div class="baegs">
 					<h2>컨디션 체크가 준비되면<br/>안내해 드립니다.</h2>
-				    <img src="resources/img/ba/icon-1.png" class="con-img" />
-				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="resources/img/ba/icon-end.png" /></div> -->
+				    <img src="/resources/img/ba/icon-1.png" class="con-img" />
+				    <!-- <div class="close" onclick="javascript:window.history.back();"><img src="/resources/img/ba/icon-end.png" /></div> -->
 				</div>
 
 			</div>
@@ -833,7 +833,7 @@
 		<div class="modal-content">
 			<div class="modal-header" style="padding: 0;min-height: 0;height: 0;">
 				<!-- <div class="baegs">
-				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="resources/img/ba/icon-end_1.png" /></div>
+				    <div class="close" data-dismiss="modal" aria-label="Close"><img src="/resources/img/ba/icon-end_1.png" /></div>
 				</div> -->
 			</div>
 			<div class="modal-body login-body">
@@ -1051,7 +1051,7 @@ function searchAddr(){
  	var mbrDelivryAddr = $("#txt_newAddr").val()+" "+$("#txt_newAddrDetail").val(); 
  	$.ajax({
  		type: "POST",
-         url: "/updateNewAddr",
+         url: "/myPage/updateNewAddr",
          data: {
          	mbrSq : sMbrSqVal,
          	mbrDelivryAddr : mbrDelivryAddr
@@ -1084,7 +1084,7 @@ function searchAddr(){
  		$.ajax({
  			type: "POST",
  			contentType: 'application/json',
- 	        url: "/trnsprtTypCdUpdate",
+ 	        url: "/myPage/trnsprtTypCdUpdate",
  	        dataType: 'json',
  	        data: JSON.stringify(param),
  	        async: false,
@@ -1311,7 +1311,7 @@ window.call = function (data) {
 		$.ajax({
 			type: "POST",
 			contentType: "application/json",
-	        url: "/getTrnsprt",
+	        url: "/myPage/getTrnsprt",
 	        data: JSON.stringify(getTrnsprt),
 	        async: false,
 			success:function(data){
@@ -1332,7 +1332,7 @@ window.call = function (data) {
 			$.ajax({
 				type: "POST",
 				contentType: "application/json",
-		        url: "/insertTrnsprt",
+		        url: "/myPage/insertTrnsprt",
 		        data: JSON.stringify(param),
 		        async: false,
 				success:function(data){
@@ -1384,7 +1384,7 @@ $("#sbx_trnsprtTypCd").on("change", function(){
 			var innerText = "";
 			$.ajax({
 				type: "POST",
-		        url: "/selectTrnsprtInfo",
+		        url: "/myPage/selectTrnsprtInfo",
 		        data: {
 		        	trnsprtDivCd : "S", //판매자
 		    		trnsprtTypCd : document.getElementById("sbx_trnsprtTypCd").value, //운송 구분 코드
@@ -1428,7 +1428,7 @@ $("#sbx_trnsprtAreaCd").on("change", function(){
 		//부가서비스 선택 셀렉트 박스에 text, value 넣기
 		$.ajax({
 			type: "POST",
-	        url: "/selectTrnsprtInfo",
+	        url: "/myPage/selectTrnsprtInfo",
 	        data: {
 	        	trnsprtDivCd : "S", //판매자
 	    		trnsprtTypCd : document.getElementById("sbx_trnsprtTypCd").value, //운송 구분 코드
@@ -1452,7 +1452,7 @@ $("#sbx_trnsprtAreaCd").on("change", function(){
 		//운송 가격 표시하기
 		$.ajax({
 			type: "POST",
-	        url: "/selectTrnsprtInfo",
+	        url: "/myPage/selectTrnsprtInfo",
 	        data: {
 	        	trnsprtDivCd : "S", //판매자
 	    		trnsprtTypCd : document.getElementById("sbx_trnsprtTypCd").value, //운송 구분 코드
@@ -1521,7 +1521,7 @@ $("#sbx_trnsprtServiceCd").on("change", function(){
 //쿠폰 목록 가져오기
 function getCouponList(cuponTypCd){
 	$.ajax({
-		url:"/myCouponList_payment",
+		url:"/myPage/myCouponList_payment",
 		type:"post",
       data: {
       	mbrSq : sMbrSqVal,
@@ -1595,7 +1595,7 @@ function getCouponList(cuponTypCd){
 	param.trnsprtServiceCdNm = $("#sbx_trnsprtServiceCd option:selected").text();
 	
 	$.ajax({
-		url:"/applyCupon",
+		url:"/myPage/applyCupon",
 		type:"post",
 		data: param,
 		success: function(data){
