--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWorkReg.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWorkReg.html
@@ -92,7 +92,7 @@
 		}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 
 <body>
@@ -133,7 +133,7 @@
 								
 								<div class="input-gra" data-toggle="modal" data-target="#searchArtstModal" id="artstSearchDiv" style="display:none;">
 									<input type="text" placeholder="작가명으로 검색해 보세요." style="cursor:pointer" disabled="disabled"/>
-									<a href="javascript:void(0);"><img src="resources/img/mypage/icon-sech.png" /></a>
+									<a href="javascript:void(0);"><img src="/resources/img/mypage/icon-sech.png" /></a>
 								</div>
 								
 								<table class="mstyle-2">
@@ -160,7 +160,7 @@
 							<div class="myd-box-2">
 								<div class="input-gra" data-toggle="modal" data-target="#searchWorkModal">
 									<input type="text" placeholder="작품명으로 검색해 보세요." style="cursor:pointer" disabled="disabled"/>
-									<a href="javascript:void(0);"><img src="resources/img/mypage/icon-sech.png" /></a>
+									<a href="javascript:void(0);"><img src="/resources/img/mypage/icon-sech.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -804,7 +804,7 @@
 				<!-- 검색버튼 클릭시 -->
 				<div class="search-show">
 					<div class="sea-box">
-						<img src="resources/img/newdalogo.png" class="sea-img" width="237"/>
+						<img src="/resources/img/newdalogo.png" class="sea-img" width="237"/>
 						
 						<div class="sea-won">
 							<!-- <div class="select-box">
@@ -813,7 +813,7 @@
 								</select>
 							</div> -->
 							<input type="text" id="txt_searchArtst" placeholder="작가명으로 검색해 보세요." onkeyup="searchArtst()"/>
-							<a href="#" style="cursor:default;"><img src="resources/img/icon-2.jpg" /></a>
+							<a href="#" style="cursor:default;"><img src="/resources/img/icon-2.jpg" /></a>
 						</div>
 						<ul class="collsul" id="ul_searchArtst">
 						</ul>
@@ -839,7 +839,7 @@
 				<!-- 검색버튼 클릭시 -->
 				<div class="search-show">
 					<div class="sea-box">
-						<img src="resources/img/newdalogo.png" class="sea-img" width="237"/>
+						<img src="/resources/img/newdalogo.png" class="sea-img" width="237"/>
 						
 						<div class="sea-won">
 							<!-- <div class="select-box">
@@ -848,7 +848,7 @@
 								</select>
 							</div> -->
 							<input type="text" id="txt_searchWork" placeholder="작품명으로 검색해 보세요." onkeyup="searchWork()"/>
-							<a href="#" style="cursor:default;"><img src="resources/img/icon-2.jpg" /></a>
+							<a href="#" style="cursor:default;"><img src="/resources/img/icon-2.jpg" /></a>
 						</div>
 						<ul class="collsul" id="ul_searchWork">
 						</ul>
@@ -1335,7 +1335,7 @@ function searchArtst(){
 	var wordLength = $("#txt_searchArtst").val().trim().length;
 	if(wordLength > 1){
 		$.ajax({
-			url:"/searchArtst",
+			url:"/myPage/searchArtst",
 			type:"post",
 	      data: {
 	      	searchKeyword : searchKeyword
@@ -1406,7 +1406,7 @@ function selectArtst(obj){
 function searchWork(){
 	var searchKeyword = $("#txt_searchWork").val();
 	$.ajax({
-		url:"/searchWork",
+		url:"/myPage/searchWork",
 		type:"post",
       data: {
       	searchKeyword : searchKeyword
@@ -1460,7 +1460,7 @@ function selectWork(obj){
 	$("#searchWorkModal").modal("hide");
 	var workSq = obj.attributes.workSq.value;
 	$.ajax({
-		url:"/selectWork",
+		url:"/myPage/selectWork",
 		type:"post",
       data: {
       	workSq : workSq
@@ -1574,7 +1574,7 @@ function keywrdSet(obj){
 	var keywrdList = obj.value.split(',');
 	var keywrdHtml = '';
 	for(var i=0; i<keywrdList.length; i++){
-		keywrdHtml += '<div id="keywrd'+i+'"><span>'+keywrdList[i]+'</span><img src="resources/img/mypage/icon-x.png" class="keywrdList" keywrdSq="'+i+'" value="'+keywrdList[i]+'"/></div>';
+		keywrdHtml += '<div id="keywrd'+i+'"><span>'+keywrdList[i]+'</span><img src="/resources/img/mypage/icon-x.png" class="keywrdList" keywrdSq="'+i+'" value="'+keywrdList[i]+'"/></div>';
 	}
 	$(".key-box").empty();
 	$(".key-box").append(keywrdHtml).trigger("create");
@@ -1877,7 +1877,7 @@ function myWorkReg(){
     			if(confirm){
     				$.ajax({
     			        type: "post",
-    			        url: "/myWorkReg",
+    			        url: "/myPage/myWorkReg",
     			        data: formData,
     			        contentType : false,
     			        processData : false,
