--- a/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myWork_mod.html
@@ -87,7 +87,7 @@
 		}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 
 <body>
@@ -127,7 +127,7 @@
 						<div class="myd-box-2">
 							<div class="input-gra">
 								<input type="text" placeholder="작가명을 입력하세요."/>
-								<a href="#"><img src="resources/img/mypage/icon-sech.png" /></a>
+								<a href="#"><img src="/resources/img/mypage/icon-sech.png" /></a>
 							</div>
 						</div>
 					</div> -->
@@ -446,7 +446,7 @@
 						<button type="button" class="ba-btn1" onclick="myWorkReg()"><span>등록하기</span></button>
 						<button type="button" class="ba-btn3" onclick="dealCheck(result.workSq)"><span>삭제하기</span></button>
 						<button type="button" class="ba-btn3" onclick="myWorkStorage()"><span>임시저장</span></button>
-						<button type="button" class="ba-btn3" onclick='javascript:pageGoPost({url:"/myWork",target:"_self",vals:[["artstSq", artstSq]]});'><span>취소</span></button>
+						<button type="button" class="ba-btn3" onclick='javascript:pageGoPost({url:"/myPage/myWork",target:"_self",vals:[["SqNumber", artstSq]]});'><span>취소</span></button>
 					</div>
 					
 					
@@ -885,7 +885,7 @@ function keywrdSet(obj){
 	var keywrdList = obj.value.split(',');
 	var keywrdHtml = '';
 	for(var i=0; i<keywrdList.length; i++){
-		keywrdHtml += '<div id="keywrd'+i+'"><span>'+keywrdList[i]+'</span><img src="resources/img/mypage/icon-x.png" class="keywrdList" keywrdSq="'+i+'" value="'+keywrdList[i]+'"/></div>';
+		keywrdHtml += '<div id="keywrd'+i+'"><span>'+keywrdList[i]+'</span><img src="/resources/img/mypage/icon-x.png" class="keywrdList" keywrdSq="'+i+'" value="'+keywrdList[i]+'"/></div>';
 	}
 	$(".key-box").empty();
 	$(".key-box").append(keywrdHtml).trigger("create");
@@ -998,7 +998,7 @@ function myWorkReg(){
 				if(confirm){
 					$.ajax({
 				        type: "post",
-				        url: "/myWorkCor",
+				        url: "/myPage/myWorkCor",
 				        data: formData,
 				        contentType : false,
 				        processData : false,
@@ -1385,7 +1385,7 @@ function dealWorkCount(workSq){
 		var result;	//ajax response 결과값 저장할 변수
 		$.ajax({
 	         type: "post",
-	         url: "/dealCheck",
+	         url: "/myPage/dealCheck",
 	         data: { "workSq" : workSq },
 	         async: false,
 	         success: function(response) {
@@ -1431,7 +1431,7 @@ function dealWorkCount(workSq){
 	function collDeletePro(workSq){
 		$.ajax({
 	        type: "post",
-	        url: "/deleteCollection",
+	        url: "/myPage/deleteCollection",
 	        data: { "workSq" : workSq },
 	        async: false,
 	        success: function(data) {
