--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_mobile.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_mobile.html
@@ -74,7 +74,7 @@
     	.head-wrap{border-bottom:#e9e9e9 1px solid;}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
 </head>
 
@@ -95,7 +95,7 @@
 						</div>
 						
 						<div class="con-btn">
-							<a href="#"><img src="resources/img/mypage/mycon-3.png" /></a>
+							<a href="#"><img src="/resources/img/mypage/mycon-3.png" /></a>
 						</div>
 					
 						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true" style="display: block;">
@@ -110,8 +110,8 @@
 								<div id="collapse1" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading1">
 									<div class="panel-body">
 										<ul class="mypage-ul">
-											<li><a href="/myDeal">거래 내역</a></li>
-											<li><a href="/coupon">쿠폰</a></li>
+											<li><a href="/myPage/myDeal">거래 내역</a></li>
+											<li><a href="/myPage/coupon">쿠폰</a></li>
 											<!-- <li><a href="#">문의 내역</a></li> -->
 										</ul>
 									</div>
@@ -146,7 +146,7 @@
 								<div id="collapse2" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading2">
 									<div class="panel-body">
 										<ul class="mypage-ul">
-											<li><a href="/information">작가 정보</a></li>
+											<li><a href="/myPage/information">작가 정보</a></li>
 											<!-- <li class="myWork" id="myWork"><a href="#">나의작품</a></li> -->
 										</ul>
 									</div>
@@ -163,9 +163,9 @@
 								<div id="collapse4" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading4">
 									<div class="panel-body">
 										<ul class="mypage-ul">
-											<li><a href="/memberEdit">회원 정보 수정</a></li>
-											<li class="" id="withdrawal"><a href="/withdrawal">회원탈퇴</a></li>
-											<li><a href="/alarm">알림 설정</a></li>
+											<li><a href="/myPage/memberEdit">회원 정보 수정</a></li>
+											<li class="" id="withdrawal"><a href="/myPage/withdrawal">회원탈퇴</a></li>
+											<li><a href="/myPage/alarm">알림 설정</a></li>
 										</ul>
 									</div>
 								</div>
@@ -199,16 +199,16 @@
 	
 	$(document).on("click", ".myCollection", function(){
 		pageGoPost({
-			url:"/myCollection",
+			url:"/myPage/myCollection",
 			target:"_self",
 			vals:[
-				["mbrSq", sMbrSqVal]
+				["SqNumber", sMbrSqVal]
 			]
 		});
 	});
 	$(document).on("click", ".scrap", function(){
 		pageGoPost({
-			url:"/scrap",
+			url:"/myPage/scrap",
 			target:"_self",
 			vals:[
 				["mbrSq", sMbrSqVal]
@@ -217,7 +217,7 @@
 	});
 
 	$(document).on("click", ".myWorkList", function(){
-		location.href="/myWorkList"
+		location.href="/myPage/myWorkList"
 	});
 
 </script>	
