--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_info.html
@@ -74,7 +74,7 @@
     	}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
 </head>
 
@@ -440,7 +440,7 @@
 													
 													$.ajax({
 													     type: "post",
-													     url: "/myPage/authorEudInfoDeleteData",
+													     url: "/member/author/EudInfoDeleteData",
 													     data: eduDeleteParam,
 													     success: function(data) {
 													    	console.log("saveData :"+data);
@@ -552,7 +552,7 @@
 													
 													$.ajax({
 													     type: "post",
-													     url: "/myPage/authorCarrerInfoDeleteData",
+													     url: "/member/author/CarrerInfoDeleteData",
 													     data: careerParam,
 													     success: function(data) {
 													    	console.log("saveData :"+data);
@@ -602,7 +602,7 @@
 													
 													$.ajax({
 													     type: "post",
-													     url: "/myPage/authorCarrerInfoDeleteData",
+													     url: "/member/author/CarrerInfoDeleteData",
 													     data: careerParam,
 													     success: function(data) {
 													    	console.log("saveData :"+data);
@@ -685,7 +685,7 @@
 																
 																$.ajax({
 																     type: "post",
-																     url: "/myPage/authorExhbtnInfoDeleteData",
+																     url: "/member/author/ExhbtnInfoDeleteData",
 																     data: exhbtnSqParam,
 																     success: function(data) {
 																    	console.log("saveData :"+data);
@@ -763,7 +763,7 @@
 																
 																$.ajax({
 																     type: "post",
-																     url: "/myPage/authorExhbtnInfoDeleteData",
+																     url: "/member/author/ExhbtnInfoDeleteData",
 																     data: exhbtnSqParam,
 																     success: function(data) {
 																    	console.log("saveData :"+data);
@@ -839,7 +839,7 @@
 																
 																$.ajax({
 																     type: "post",
-																     url: "/myPage/authorExhbtnInfoDeleteData",
+																     url: "/member/author/ExhbtnInfoDeleteData",
 																     data: exhbtnSqParam,
 																     success: function(data) {
 																    	console.log("saveData :"+data);
@@ -914,7 +914,7 @@
 																
 																$.ajax({
 																     type: "post",
-																     url: "/myPage/authorExhbtnInfoDeleteData",
+																     url: "/member/author/ExhbtnInfoDeleteData",
 																     data: exhbtnSqParam,
 																     success: function(data) {
 																    	console.log("saveData :"+data);
@@ -1250,7 +1250,7 @@
 		
 		 $.ajax({
 		     type: "post",
-		     url: "/myPage/authorInfoBaseViewData",
+		     url: "/member/author/InfoBaseViewData",
 		     data: viewBaseParams,
 		     success: function(data) {
 		    	
@@ -1345,7 +1345,7 @@
    					
    				 	$.ajax({
    				     	type: "post",
-   				     	url: "/myPage/authorEduInfoSaveData",
+   				     	url: "/member/author/EduInfoSaveData",
    				     	data: JSON.stringify(edulist),
    				  		dataType: "json",
    				  	 	processData : true /*querySTring make false*/,
@@ -1389,7 +1389,7 @@
    					
    					$.ajax({
    				     	type: "post",
-   				     	url: "/myPage/authorCareerInfoSaveData",
+   				     	url: "/member/author/CareerInfoSaveData",
    				     	data: JSON.stringify(careerlist),
    				  		dataType: "json",
    				  	 	processData : true /*querySTring make false*/,
@@ -1434,7 +1434,7 @@
    					
    					$.ajax({
    					type: "post",
-   					url: "/myPage/authorExhbtnInfoSaveData",
+   					url: "/member/author/ExhbtnInfoSaveData",
    					data: JSON.stringify(exhbtnlist),
    						dataType: "json",
    					 	processData : true /*querySTring make false*/,
@@ -1546,7 +1546,7 @@
 			
 		$.ajax({
 		     type: "post",
-		     url: "/myPage/authorInfoBaseSaveData",
+		     url: "/member/author/InfoBaseSaveData",
 		     data: baseParams,
 		     success: function(data) {
 		    	console.log("saveData :"+data);
@@ -1584,7 +1584,7 @@
 		 
 		 $.ajax({
 		     type: "post",
-		     url: "/myPage/authorEduInfoViewData",
+		     url: "/member/author/EduInfoViewData",
 		     data: params,
 		     success: function(data) {
 		    
@@ -1639,7 +1639,7 @@
 		 
 		 $.ajax({
 		     type: "post",
-		     url: "/myPage/authorCarrerInfoViewData",
+		     url: "/member/author/CarrerInfoViewData",
 		     data: params,
 		     success: function(data) {
 		    	 
@@ -1699,7 +1699,7 @@
 		 
 		 $.ajax({
 		     type: "post",
-		     url: "/myPage/authorCarrerInfoViewData",
+		     url: "/member/author/CarrerInfoViewData",
 		     data: params,
 		     success: function(data) {
 		    	 
@@ -1757,7 +1757,7 @@
 		 
 		 $.ajax({
 		     type: "post",
-		     url: "/myPage/authorExhbtnInfoViewData",
+		     url: "/member/author/ExhbtnInfoViewData",
 		     data: params,
 		     success: function(data) {
 		    	 
@@ -1817,7 +1817,7 @@
 		 
 		 $.ajax({
 		     type: "post",
-		     url: "/myPage/authorExhbtnInfoViewData",
+		     url: "/member/author/ExhbtnInfoViewData",
 		     data: params,
 		     success: function(data) {
 		    	 
@@ -1878,7 +1878,7 @@
 		 
 		 $.ajax({
 		     type: "post",
-		     url: "/myPage/authorExhbtnInfoViewData",
+		     url: "/member/author/ExhbtnInfoViewData",
 		     data: params,
 		     success: function(data) {
 		    	 
@@ -1939,7 +1939,7 @@
 		 
 		 $.ajax({
 		     type: "post",
-		     url: "/myPage/authorExhbtnInfoViewData",
+		     url: "/member/author/ExhbtnInfoViewData",
 		     data: params,
 		     success: function(data) {
 		    	 
