--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork.html
@@ -75,7 +75,7 @@
     	}
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
     
 </head>
 
@@ -168,9 +168,9 @@ $(function() {
 	var conTitleHtml = "";
 	conTitleHtml += '<h3>포트폴리오</h3>';
 	$("#conTitle").append(conTitleHtml).trigger("create");
-	//conBtn.innerHTML += '<a href="/myWork_reg"><img src="resources/img/mypage/mycon-1.png" /></a>';
-	conBtn.innerHTML += '<a href="javascript:myWorkRegMove();"><img src="resources/img/mypage/mycon-1.png" /></a>';
-	conBtn.innerHTML += '<a href="javascript:fnModalAlert();"><img src="resources/img/mypage/mycon-2.png" /></a>';
+	//conBtn.innerHTML += '<a href="/myPage/myWork_reg"><img src="/resources/img/mypage/mycon-1.png" /></a>';
+	conBtn.innerHTML += '<a href="javascript:myWorkRegMove();"><img src="/resources/img/mypage/mycon-1.png" /></a>';
+	conBtn.innerHTML += '<a href="javascript:fnModalAlert();"><img src="/resources/img/mypage/mycon-2.png" /></a>';
 	
 	$("#myWork").addClass("active");
 	
@@ -179,14 +179,14 @@ $(function() {
 
 function myWorkRegMove() {
 	
-	location.href = "/myWork_reg";
+	location.href = "/myPage/myWork_reg";
 	
 	/*
 	modalConfirm("알림", "시스템 기능 개선으로 인하여 삭제 및 비공개 처리가 불가능합니다. 등록하시겠습니까?", 
 	
 	function(confirm){
 		if(confirm){
-				location.href = "/myWork_reg";					
+				location.href = "/myPage/myWork_reg";					
 		}
 	});
 	*/
@@ -238,7 +238,7 @@ function myWorkList(){
 				html += '<div>';
 				html += '<div class="uesr-s">';
 				if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
- 				html += '<img src="resources/img/de/ues-icon.png"/>';
+ 				html += '<img src="/resources/img/de/ues-icon.png"/>';
  				}else{
  				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
  				}
@@ -296,7 +296,7 @@ function myWorkList(){
 				html += '<div>';
 				html += '<div class="uesr-s">';
 				if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
- 				html += '<img src="resources/img/de/ues-icon.png"/>';
+ 				html += '<img src="/resources/img/de/ues-icon.png"/>';
  				}else{
  				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
  				}
@@ -348,7 +348,7 @@ function myWorkList(){
 				html += '<div>';
 				html += '<div class="uesr-s">';
 				if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
- 				html += '<img src="resources/img/de/ues-icon.png"/>';
+ 				html += '<img src="/resources/img/de/ues-icon.png"/>';
  			}else{
  				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
  			}
@@ -398,7 +398,7 @@ function myWorkList(){
 				html += '<div>';
 				html += '<div class="uesr-s">';
 			if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
-				html += '<img src="resources/img/de/ues-icon.png"/>';
+				html += '<img src="/resources/img/de/ues-icon.png"/>';
 			}else{
 				html += '<img src="'+ result[i].artstProfileImgUrl +'" style="width:42px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
 			}
@@ -473,12 +473,12 @@ setInterval(function() {
 
 function myWorkMod(obj){
 	var workSq = obj.getAttribute("workSq");
-	location.href = "/myWorkMod?workSq="+workSq;
+	location.href = "/myPage/myWorkMod?workSq="+workSq;
 }
 
 function dealReg(obj){
 	var workSq = obj.getAttribute("workSq");
-	location.href = "/dealReg?workSq="+workSq+"&&mbrSq="+sMbrSqVal;
+	location.href = "/deal/openDealReg?workSq="+workSq+"&&mbrSq="+sMbrSqVal;
 }
 
 $(document).on("click", ".heart", function(){
@@ -489,7 +489,7 @@ $(document).on("click", ".heart", function(){
 	if($(this).hasClass("on")){
 		$.ajax({
 	        type: "post",
-	        url: "/scrapDel",
+	        url: "/member/myPage/scrapDel",
 	        data: param,
 	        success: function(data) {
 	        	element.removeClass("on");
@@ -502,7 +502,7 @@ $(document).on("click", ".heart", function(){
 	}else{
 		$.ajax({
 	        type: "post",
-	        url: "/scrapAdd",
+	        url: "/member/myPage/scrapAdd",
 	        data: param,
 	        success: function(data) {
 	        	if(data == 1){
@@ -580,17 +580,17 @@ $(document).on("click", ".heart", function(){
  
  
   	function workDetailMove(workSq){
-  	 	location.href="/workDetail?workSq="+workSq;
+  	 	location.href="/deal/workDetail?SqNumber="+workSq;
   	}
 
 	
 	function biddingMove(dealSq) {
 		
 		pageGoPost({
-			url:"/bidding",
+			url:"/deal/bidding",
 			target:"_self",
 			vals:[
-				["dealSq", dealSq]
+				["SqNumber", dealSq]
 			]
 		});
 		
@@ -598,11 +598,11 @@ $(document).on("click", ".heart", function(){
 	
 	//작품수정
   	function myWorkMod(workSq){
-  		location.href = "/myWorkMod?workSq="+workSq;
+  		location.href = "/myPage/myWorkMod?workSq="+workSq;
   	}
   	//상세보기
   	function workDetailMove(workSq){
-  	 	location.href="/workDetail?workSq="+workSq;
+  	 	location.href="/deal/workDetail?SqNumber="+workSq;
   	}
       
 </script>
