--- a/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork_backup.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/portfolio_myWork_backup.html
@@ -105,8 +105,8 @@ $(function() {
 	var conTitleHtml = "";
 	conTitleHtml += '<h3>포트폴리오</h3>';
 	$("#conTitle").append(conTitleHtml).trigger("create");
-	conBtn.innerHTML += '<a href="/myWork_reg"><img src="resources/img/mypage/mycon-1.png" /></a>';
-	conBtn.innerHTML += '<a href="javascript:fnModalAlert();"><img src="resources/img/mypage/mycon-2.png" /></a>';
+	conBtn.innerHTML += '<a href="/myPage/myWork_reg"><img src="/resources/img/mypage/mycon-1.png" /></a>';
+	conBtn.innerHTML += '<a href="javascript:fnModalAlert();"><img src="/resources/img/mypage/mycon-2.png" /></a>';
 	
 	$("#myWork").addClass("active");
 	myWorkList();
@@ -165,7 +165,7 @@ function myWorkList(){
 			myWorkListHtml += '		<div class="heart off" workSq="'+ result[i].workSq +'" style="cursor:pointer;"></div>';
 			myWorkListHtml += '		<div class="uesr-s">';
 			if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
-				myWorkListHtml += '		<img src="resources/img/de/ues-icon.png"/>';
+				myWorkListHtml += '		<img src="/resources/img/de/ues-icon.png"/>';
 			}else{
 				myWorkListHtml += '		<img src="'+ result[i].artstProfileImgUrl +'" style="width:40px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
 			}
@@ -214,7 +214,7 @@ function myWorkList(){
 		myWorkListHtml += '		<div class="heart off" workSq="'+ result[i].workSq +'" style="cursor:pointer;"></div>';
 		myWorkListHtml += '		<div class="uesr-s">';
 		if(result[i].artstProfileImgUrl == null || result[i].artstProfileImgUrl == ""){
-			myWorkListHtml += '		<img src="resources/img/de/ues-icon.png"/>';
+			myWorkListHtml += '		<img src="/resources/img/de/ues-icon.png"/>';
 		}else{
 			myWorkListHtml += '		<img src="'+ result[i].artstProfileImgUrl +'" style="width:40px;border-radius: 7px;-moz-border-radius: 7px;-khtml-border-radius: 7px;-webkit-border-radius: 7px"/>';
 		}
@@ -259,7 +259,7 @@ function myWorkList(){
 $(document).on("click", ".cor-a", function(){
 	var workSq= $(this).attr("workSq");
     pageGoPost({
-		url:"/myWorkMod",
+		url:"/myPage/myWorkMod",
 		target:"_self",
 		vals:[
 			["workSq", workSq]
@@ -270,7 +270,7 @@ $(document).on("click", ".cor-a", function(){
 $(document).on("click", ".reg-a", function(){
 	var workSq= $(this).attr("workSq");
 	pageGoPost({
-		url:"/dealReg",
+		url:"/deal/openDealReg",
 		target:"_self",
 		vals:[
 			["workSq", workSq]
@@ -286,7 +286,7 @@ $(document).on("click", ".heart", function(){
 	if($(this).hasClass("on")){
 		$.ajax({
 	        type: "post",
-	        url: "/scrapDel",
+	        url: "/member/myPage/scrapDel",
 	        data: param,
 	        success: function(data) {
 	        	element.removeClass("on");
@@ -299,7 +299,7 @@ $(document).on("click", ".heart", function(){
 	}else{
 		$.ajax({
 	        type: "post",
-	        url: "/scrapAdd",
+	        url: "/member/myPage/scrapAdd",
 	        data: param,
 	        success: function(data) {
 	        	if(data == 1){
