--- a/src/main/resources/templates/thymeleaf/result_artist.html
+++ b/src/main/resources/templates/thymeleaf/result_artist.html
@@ -77,7 +77,7 @@
     	};
     </style>
     
-    <link rel="icon" type="image/png" href="resources/img/favicon.png">
+    <link rel="icon" type="image/png" href="/resources/img/favicon.png">
 </head>
 
 <body>
@@ -92,9 +92,9 @@
 				
 				<div class="aut-top">
 					<ul class="mgz-ul3 aut-none">
-						<li><a th:href="@{/totalSearch_work(searchKeyword = ${result.searchKeyword})}">작품</a></li>
-						<li class="active"><a th:href="@{/totalSearch_artist(searchKeyword = ${result.searchKeyword})}">작가</a></li>
-						<li><a th:href="@{/totalSearch_content(searchKeyword = ${result.searchKeyword})}">컨텐츠</a></li>
+						<li><a th:href="@{/main/totalSearch_work(searchKeyword = ${result.searchKeyword})}">작품</a></li>
+						<li class="active"><a th:href="@{/main/totalSearch_artist(searchKeyword = ${result.searchKeyword})}">작가</a></li>
+						<li><a th:href="@{/main/totalSearch_content(searchKeyword = ${result.searchKeyword})}">컨텐츠</a></li>
 					</ul>
 				</div>
 				
@@ -162,14 +162,9 @@ $(function() {
 
 $(document).on("click", ".artstInfo", function(){ 
 	var artstSq= $(this).attr("id");
-	location.href = '/artistDetail?artstSq='+artstSq;
-    /* pageGoPost({
-		url:"/artistDetail",
-		target:"_self",
-		vals:[
-			["artstSq", parseInt(artstSq)]
-		]
-	}); */
+
+	requestUrl = "/artist/artistDetail";
+	loginCheck(requestUrl,artstSq);
 });
 
 /*
